--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,155 +1,26 @@
 ---
-title: 中共与经济脱钩就是脱离了对老百姓的经济控制
+title: 2.06 大直播后记：女性是共产党执政的工具
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1968913/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1969028/)
 
-[https://gtv.org/video/id=620055b0585ecc15d73e4b04](https://gtv.org/video/id=620055b0585ecc15d73e4b04)
+整理：Rianna
+编辑：Sadhu
 
-一个劳斯莱斯发动机
-Un motor Rolls Royce
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-3.png)图片来源：雅典娜设计组
 
-还有一个美国通用的发动机
-Y un motor general de EE. UU
 
-你知道多少专利吗
-Sabes hay cuántos patentes
+我们的一个战友，她曾经唱过《塞北的雪》。她说，这个体制太邪恶了，没有一样是真的！ 我想告诉大家，像这样的女孩，如果没逃出去，她会是什么样的结局呢？她绝对会在音乐圈会中惨不忍睹。共产党说所有的女人是半边天，你觉得真的是半边天吗？这位女孩的介绍人是现在国内几个大明星的经纪人，他说，七哥，中国女性的地位和阿富汗比，和中东比，算不错的了。毕竟中国绝大女性在家中说了算。我说，无知就是这么诞生的。让你死，让你被虐待，让你被贩卖，你还感觉得很好。
 
-4000种专利
-4000 patentes
+下个话题就是中国女性的待遇。所谓中国女性的半边天，我从我娘身上，我从我嫂子身上，我从你七嫂身上从来没有感受到。即使在今天，你七嫂子就像我老板一样，天天像训狗一样训着我，哈，我也不觉得你七嫂是半边天。我觉得中国人在思想里和境界里就没有把女人和男人同等过。只是中国女人自我感觉地认为自己和男人平等。这就是为什么全中国社会女人被贩卖。没有任何人认识到男女不平等这一点。甚至我本人在当年在老家，看到买媳妇的事情，我也没有觉得不正常。这是在89年以前的事儿，我当时十三四岁。在中国这个社会中，由于对女性的定位，人们觉得女人就该买。女性就是工具，就是商品，就是被买卖。 就像在中东和在印度，一旦女人有了什么婚外情，就该拿石头砸死，就活该，而且人们都围着看，这种行为就叫愚昧，就叫无知。将这一点对比西方，大家可以看到西方的伟大。在西方，只要绑架女性，就要使用绞刑惩罚。这就是东西方的差距。共产党的老杂毛们完全不懂得这样的人类文明，还所谓半边天。我曾经问过中国最牛的执政的女性吴仪，最强的，我说你怎么看待半边天这个说法。连吴仪都说，在中国这个国家，女人但凡出人头地，要么有色，要么有一个阴歹的心。有色，就有人睡你，老杂毛们就选长得好看的，生辰八字和的作为生孩子的工具。吴仪说，如果你漂亮，你就有生存的空间。另外，你就是心狠歹毒，啥都能干，变态。女贪官被抓起来以后，发现她们都比男的狠。所以在中国，女性是没有半边天的，女性是共产党执政的工具，是全社会的工具。没有人想过，你妈妈那么辛苦累死，你也不觉得是不公平的。 我觉的，不管你是大师还是天使，你们从来没有体贴过母亲，我不相信你们会公平对待过母亲。中国女性从任何角度都没被公平对待过，特别是在中国这种男性的社会，只是你不知道。在中国法律中，已经认为绑架是习以为常的事情，是合理的。这是一个巨大的人权的讽刺。在西藏和新疆，女孩儿但凡有点姿色都会被选出去。 以音乐团，文工团的形式成为了祭品和贡品。只是是被当地的村长，当地的县长，还是省长、书记，还是中共的老头，反正总有人来享受你的青春和魅力。你就是贡品和性品！
 
-你申请完4000种专利
-Luego que termines de solicitar los 4000 patentes
+***发布：**tianzhihuan*
 
-大概需要50年
-Se necesita aproximadamente 50 años
-
-而且你都能做得到, 就今天申请
-Y lo puedes hacer, lo solicitas hoy
-
-一个大飞机的材料
-Los materiales para un gran avión
-
-材料涉及上千种的专利
-Los materiales involucran miles de patentes
-
-你错了, 你重新来一把
-Si te equivocas, debes comenzar de nuevo
-
-一架飞机将近十几万种的高科技
-Casi cientos de miles de alta tecnología en un avión
-
-所以它叫墓碑科技
-Por eso se llama tecnología de lápidas sepulcral
-
-是西方通过一次次技术失败掉下来死人
-El que ha caído y muerto por fallas técnicas una y otra vez en el occidente
-一战二战之后搞起来的
-Logrado luego de la primera y segunda guerra mundial
-
-你怎么给我长出来
-Cómo se hizo
-
-他说919（中国商飞C919大型客机）一定要献礼, 十八大献礼
-Él dijo que el COMAC C919 debía ser un regalo, un regalo para el 18º Congreso Nacional del PCCh
-
-我说你要18大能献上礼
-Digo que si puedes ofrecer el regalo en el 18º Congreso Nacional
-
-我说你把我用那飞机(机翼)什么的把我给砍了, 我都愿意
-Estoy dispuesto a que me mates con ese avión (ala) o algo así
-
-弄死我, 我第一个我说
-Mátame, fui el primero en decir
-
-你先把我给砸死了
-Mátame primero
-
-所以中国人什么都是假的
-Por eso todo es falso en los chinos
-
-所以你没有任何高科技
-Si no tienes ninguna alta tecnología
-
-你中国生产啥, 你告诉我
-Qué puede producir China, dime tú
-
-从甘肃到广西
-Desde Gansu hasta Guangxi
-
-中国除了给当官生产虫草
-Además de producir ophiocordyceps sinensis para funcionarios en China
-
-夜总会, 东北的烤鹅, 大饼子
-Discotecas, gansos Asado del Noreste, tortitas
-
-福建的吃蛇, 广东的吃蛇
-En Fujian y Guangdong comen serpientes
-
-还有什么蝙蝠
-Y que si murciélagos
-
-你告诉我你生产啥呀
-Dime qué vas a producir
-
-粮食大部分进口
-La mayoría de los alimentos son importados
-
-高科技几乎是零
-La alta tecnología es casi cero
-
-连圆珠笔芯都造不出来
-Ni siquiera puede hacer una recarga de bolígrafo
-
-马桶盖都造不出来
-Ni puede hacer una tapa de inodoro inteligente
-
-你穿的衣服几乎都是化学的
-Las ropas que usas casi todas son químicas
-
-你的水都是被污染的, 你告诉我你靠啥呀
-El agua es contaminada, dime con qué te puedes depender
-
-所以中国老百姓
-Por eso el pueblo chino
-
-你脱了钩
-Si te liberas
-
-你就是脱了假, 脱了险
-Significa que te libras de la falsedad y del peligro
-
-第三, 共产党脱了钩就脱啥呀
-Tercero, qué sucede si te liberas del Partido Comunista
-
-你们就脱了控
-Te liberas del control
-
-共产党就是用所谓的经济控制你
-El Partido Comunista te controla a través del llamado economía
-
-让你当奴隶
-Para que seas su esclavo
-
-* * *
-
-日期：02/03/2022
-原视频标题：中共与经济脱钩就是脱离了对老百姓的经济控制
-La desvinculación del PCCh de la economía significa romper con el control económico hacia el pueblo
-
-原视频日期：01/23/2022
-原视频网址：**[https://gettr.com/post/pq03fp1a85](https://gettr.com/post/pq03fp1a85)**
-任务编号：KC441（3573）
-视频时间段：0:00-02:05
-西听校：洛杉矶盘古农场- 霙霙（文霙）
-翻译：洛杉矶盘古农场- 小文萱
-翻译终校：洛杉矶盘古农场- 霙霙（文霙）
-字幕+视频制作：洛杉矶盘古农场-Jambo
-审片：洛杉矶盘古农场-银龙
-发布：洛杉矶盘古农场-恩典
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
