--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,43 +1,11 @@
 ---
-title: 接种中共病毒疫苗后将提高癌症复发率
+title: 卢比奥参议员将阻止取消对华贸易关税的动议
 ---
-`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/1968817/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1968898/)
 
-**疫苗（新冠疫苗）
-中共病毒（新冠病毒covid-19）**
+02/02/2022 卢比奥参议员表示，中共一向不遵守协议，他会竭力阻止议会取消对华征收贸易关税的动议。
 
-**我们不反疫苗，只针对假疫苗
-我们不反科学，只针对反人类**
-
-编译：赵圣欢
-![](https://assets.gnews.org/wp-content/uploads/2022/02/截屏2022-02-07-14.27.31.png)
-如果给每个讲述自己挚友经历者一美金报酬，而他的癌症在中共病毒疫苗发作前处于缓解期，可在接种后不久就变得无法控制，我便可以挂印封金，老于泉林。
-
-DMED数据库显示，在推出中共病毒疫苗后，癌症发病率上升了3倍。参见《战争行动》：拜中共病毒「疫苗」所赐，军方的癌症发病率增加了两倍多。 在与瑞安•科尔（Ryan Cole）谈论这个问题时，他认为这主要是由于加速了现有的癌症（人们已知道自身所患癌症或出乎人们料想的新癌），而不是创造新的癌症病例。
-
-考虑一下我在2022年2月5日收到的这两封电子邮件，它们代表了我一直看到的评论： 我看了《第二观点》，想知道你是否找到了所谈事项的任何相关信息。我感兴趣的主题是添加到MRNA（信使核糖核酸）疫苗中的未转译的人类基因，这些基因是否可能对免疫系统如何追踪癌细胞产生不利影响正在讨论中 – 以减少对疫苗的炎症反应。 我看过几篇文章，其中有特定患者的案例研究，这些患者的癌症在接种疫苗后急剧恶化。
-
-及
-我私下认识两个人，他们现在患有非常严重的癌症……我昨天和我的医生交谈，她说她的一个病人在周一被诊断出癌症，到上周四死亡。她以前没有癌症…[\[email protected\]](/cdn-cgi/l/email-protection)
-及
-
-正是如此！我知道的三个人癌症正在康复期，注射疫苗后病症卷土重来；现在其中两人已病亡，第三人正接受全身化疗。我为其他所有携带BRCA基因的朋友深表担忧。
-及
-![](https://assets.gnews.org/wp-content/uploads/2022/02/PHOTO-2022-02-07-14-20-14.jpg)
-且这些推文表明，疫苗可以产生新的癌症：
-![](https://assets.gnews.org/wp-content/uploads/2022/02/PHOTO-2022-02-07-14-20-22.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/02/PHOTO-2022-02-07-14-20-31.jpg)
-
-
-至少，当接种疫苗后，你突然癌症复发或出现新的癌症时，不要感到诧异。
-
-总结
-
-如果您最近接种了疫苗，并且您以前受到控制的癌症病情急转直下，罪魁祸首很可能是您接种的”安全有效”疫苗。
-
-参考链接：[Cancers coming back with a vengeance is very common after the COVID vax](https://stevekirsch.substack.com/p/cancers-coming-back-with-a-vengeance)
-
-审核校对：Barry Jack
-上传排版：F
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
  
 
