--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,129 +1,11 @@
 ---
-title: 美国大使馆撤离, 不断不交弄死共产党
+title: 参议员卢比奥担忧美国运动员和记者的安全
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1968797/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1968893/)
 
-[https://gtv.org/video/id=61ff3311d90bdd2085a5a09e](https://gtv.org/video/id=61ff3311d90bdd2085a5a09e)
+02/02/2022 参议员卢比奥担忧美国运动员和记者的安全，并表示举办这届奥运会的，显而易见是一个犯下种族灭绝罪行的政府。
 
-接下来就是共产党
-El que sigue es el Partido Comunista
-
-美国大使馆撤以后
-Después de que la embajada de los Estados Unidos se retirara
-
-全世界都可以揍他
-El mundo entero podrá apuñalarlo
-
-什么概念我告诉大家
-En qué consiste esto, déjame decirles
-
-是美国在联合国, 在全世界面前
-Es EE. UU en las Naciones Unidas y frente a todo el mundo
-
-1979年建了大使馆
-En el año 1979 se construyó la embajada
-
-中美恢复建交
-China y EE. UU reanudan relaciones diplomáticas
-
-它才合法的有权把台湾(从联合国)踢出去
-De esta forma, tendrá el derecho legal de expulsar a Taiwán (de las Naciones Unidas)
-
-美国这次的撤离
-El retiro de EE. UU de esta vez
-
-授权撤离绝对不是绝交也不是断交
-El retiro autorizado definitivamente no es una ruptura ni un corte de relaciones diplomáticas
-
-美国人是跟它弄什么?
-¿Qué quiere hacer EE. UU con ellos?
-
-不断不交弄死它
-No cortar ni romper para causarle la muerte
-
-记住我今天第一个说
-Recuerda primero que dije hoy
-
-叫不断不交
-No es una ruptura ni un corte
-
-啥叫不断不交?
-¿En qué consiste esto?
-
-成天告诉你, 我要回来啦
-Se la pasa diciendo todo el día: “ya voy a regresar”
-
-甚至真的有人回去表现表现
-Incluso habrá personas que realmente regresará para actuar
-
-给我点这个, 给我点那个
-Dame esto, dame aquello
-
-看看南斯拉夫还有伊拉克当年大使馆发生什么
-Mira lo que pasó con las embajadas de Yugoslavia e Irak
-
-就是直接性的
-Fueron de manera directa
-
-就内部, 这是国家的政策
-Internamente, es política nacional
-
-跟两党都没关系
-No tiene relación con los dos partidos
-
-这是美国人的决定
-Esta fue la decisión de los estadounidenses
-
-千万记住, 这不是美国政治决定
-Deben recordar, esta no fue la decisión política de EE. UU
-
-这是美国国家安全的选择
-Fue una opción para la seguridad nacional estadounidense
-
-我再说一遍, 美国20年了
-Digo de nuevo, EE. UU tiene 20 años
-
-准备好就干掉这几个国家的政权
-Ya está preparado para eliminar los regímenes de estos países
-
-从来没停止过, 跟任何总统, 党派没关系
-Nunca había paralizado, no tiene relación con ningún presidente y partidismo
-
-这个行动就是告诉你
-Este movimiento te está diciendo
-
-我现在就不会断
-Ahora no romperé
-
-也不会交
-Tampoco cortaré
-
-不断不交弄死你
-No cortar ni romper para causarle la muerte
-
-你看共产党会被玩死
-Verás, el Partido Comunista será jugado hasta morir
-
-日期：02/04/2022
-原视频标题：美国大使馆撤离, 不断不交弄死共产党
-El retiro de la embajada de EE. UU; no cortar ni romper le causará la muerte al Partido Comunista
-
-* * *
-
-原视频日期：01/30/2022
-原视频网址：**[https://gettr.com/post/prcgn3e965](https://gettr.com/post/prcgn3e965)**
-任务编号：KC443（3643）
-视频时间段：0:00-01:32
-西听校：洛杉矶盘古农场- 霙霙（文霙）
-翻译：洛杉矶盘古农场- 小文萱
-翻译终校：洛杉矶盘古农场- 霙霙（文霙）
-字幕+视频制作：洛杉矶盘古农场-天涯行
-审片：洛杉矶盘古农场-银龙
-发布：洛杉矶盘古农场-恩典
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
  
 
