--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,20 +1,25 @@
 ---
-title: 水就是故事啊，男女没有水就完了
+title: 所有人都恨习太阳一个人的“冬奥会”
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968746/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968841/)
 
-整理：雅典娜速记组
-编辑：tianzhihuan
+#### 整理：雅典娜速记组
+编辑：开智则立
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8-45～8-50～1.png)
+战友问：中共花巨资邀请世界上所谓的这些虚伪的政客来参加冬奥会的开幕式，那按照常理的逻辑，应该是把这些领导人都照顾好，为什么会出现现在这种状况？
 
-你要看到七哥小时候的照片你都得流水你不流水，你不正常。是吧？你极少第一句话哇塞，太酷了一副藐视天下这你七嫂今天看着我都那样了，是不是鼻子眼睛都流水是不是？你们你想想，但是这个本能啊。那么这个不让你说的话不让你做的事情就是西方文明最要做的事情，我为什么要说，基本上赔3000多万美元了，现在已经还是其未来一两年还会赔，哪有一个拿着钱要赔的，但我信，你看他钟仁，就是个最明显的例子。
+七哥：很简单！就像男女在一起，最后想再坚持20秒但能力不及。现在中国的经济，政治协调能力不及坚持不了20秒，就是好吃好喝的。它的钱和整个协调能力都不济了。
 
-钟仁是所有上直播孩子变化，你可以看得着每时每刻，包括在群里边聊天这孩子的境界呀，他都在升华，Rachel整个人就变了个人，猫本还穿着最老的Gfashion。但你看那种精神，这就叫fashion啊，只有我们雷蒙和带着logo，我们有来处啊，我们有去处，我们有，这是人最基本的，所以追求讲的太好了。好，继续，谢谢。嗯，刚刚我就是在想。好，谢谢，谢谢刚刚我就是在想这个我们Gfashion是现在是引领引领时尚的，在现在将来都会引领我们时尚的潮流。然后呢，刚刚郭先生说到这个情绪啊，我就是很很很明显的感觉到，就包括我们今天在座的4位嘉宾，可能都是经常有意无意的在压抑自己的情绪，甚至包括在家里的时候，像我以前经常跟父母聊天的时候，或者他们。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/水就是故事啊，男女没有水就完了.001.jpeg)
-2022年1月7日文贵大直播
+第二、就是在党内，对这次所谓的习太阳本人的冬奥会，大家都恨，都是被绑架了。你觉得到现场工作的验病毒的人和天天被弄去表演的人， 只有那些朝阳群众？那些傻孩子，穷苦老百姓们，一辈子没见过摄像机，逮住上摄像机了，就是个表演的奴隶。剩下那些当官的，还有有脑子的人，包括张艺谋这些人，哪个愿意参加啊？天天有病毒的危险，恨啊！就是内部的仇恨以及这次所谓习太阳一人的表演。
 
-*发布：tianzhihuan*
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+第三、就是现在整个国内的病毒，已经到了大家无法想象的程度，带着内部的恐惧，内部的病毒带来的威胁，谁愿意干这个？很多人都恨这帮运动员，你们到中国，明知道这是一个虐待奴隶的地方，这是一个金钱交易的结果，你还往这儿冲，这些人骨子里面很多人是看不惯的。
+
+早在几个月以前，西方世界开始调查这次冬奥会所有奥林匹克委员会有多少人在中国拿到了利润。我告诉大家你看看，国际奥林匹克委员会有多少次换主席? 什么萨马兰奇？多少次腐败？哪次腐败不都是跟申请奥运会和开奥运会有关系？我觉的人类有奥林匹克精神之外，奥林匹克之神在上天都会怒它！就是中国共产党已经把奥林匹克国际体育组织变成了真的是让它威胁的一个小姐。
+
+*发布：开智则立*
+
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
 [澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
 [澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
 [澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
