--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,41 +1,26 @@
 ---
-title: 台湾外交部称俄中联合声明是对台湾主权的侮辱
+title: 为什么要追求喜马拉雅（二）
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1968718/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968837/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/New_Project-2.jpg)资料图
-台湾英文新闻2022年02月05日台北报道，台湾外交部周六（2月5日）谴责俄罗斯和中共国当天发表的联合声明，称其试图取消台湾主权的合法性。
+整理：雅典娜速记组
+编辑：tianzhihuan
 
-在一份关于国际关系和全球可持续发展的联合声明中，俄罗斯重申其对“一个中国”原则的支持，并表示反对台湾独立。
+为啥追求喜马拉雅？当时海外的欺民贼攻击我的时候，当他们说郭文贵一手烂牌，不知道怎么打的时候，我真的是在那个18楼哈哈哈哈大笑，我那个笑声我觉得真的震到天了，也真的像拍电影一样，就像那武侠小说，我觉得我真的把纽约曼哈顿那种震垮的感觉，我笑了很久。就是他们，我知道这人是没希望了，就你告诉郭文贵我怎么打牌？我都能印出154张牌，不是54张牌，你告诉我解释解释喜马拉雅的意义，他都不知道，他应该看出郭文贵的神秘和他的深思熟虑，我就想完了，这帮人完了，这不是对牛弹琴了，这是与猪弹琴了。
 
-此外，俄罗斯和中共国表示，“倡导民主和人权不能被用来对其他国家施加压力”，并表示反对在保护民主和人权的幌子下干涉主权国家的内政。两国还敦促国际社会“尊重文化和文明的多样性，以及不同国家人民的自决权”。
+你必须问一个问题，为什么他吃猪食，他不吃馒头，吃包子，人为什么不吃猪食啊？现在猪告诉人家说，你郭七，你个傻货竟然吃大包子，你看，我这猪食吃多好啊，那你发现原来这是猪啊，这一群猪啊，原来我的市场这么大，我就继续吃我的，那你吃你的猪食把。我用了几年证明了这个。当我说一切都是刚刚开始的时候，欺民贼就骂我，攻击我，共产党说这个傻子，一切都是刚刚开始你永远都不会结束，他就不知道“一切都是刚刚开始”这句话，是从什么时候开始的？罗马时代，波斯人是人类文明的开始，你看当年波斯打仗的时候在前面的，一切都是刚刚开始。
 
-根据台湾外交部的一份新闻稿，外交部回应说，中共国从未统治过台湾，并强调只有由台湾人自由选举产生的政府才能在国际上代表这个国家。外交部说，无论中共政府如何试图歪曲其对台湾的看法，它都无法改变这一事实。
+没人懂他，就没有人真正懂人类的历史文明的历史，耶稣告诉你，现在从十字架下来了，他从十字架下来了，活着回来了，证明给你，我是神，我能活着。第一句话，一切都是他。没人解读过。所以说今天雷蒙问得好，喜马拉雅山就是耶稣复活的故事。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/为什么要追求喜马拉雅（二）-.jpg)
+2022年1月7日文贵大直播
 
-外交部说，中共国无权在世界上代表台湾，它不应该强迫其他国家、国际组织和国际公司违背其意愿支持“编造的”“一个中国”原则。它将中共继续谎称“台湾属于中华人民共和国”的说法称为中共国的虚假信息运动的一部分。
-
-台湾外交部指责中共国利用与俄罗斯的双边会谈来推动专制主义的扩张，是对“奥林匹克五环的侮辱”。它补充说，“世界认识到中共政权的侵略、扩张和破坏和平的狰狞面目”。
-
-简评：
-
-中共在中俄发表这个联合声明上面花了天价的钱，为俄罗斯能与中共共同署名站队，据说中共支付了俄罗斯1000亿美金，这些钱都来自与中共国的老百姓。在这样的政府统治下，中共国还有无数个杨改兰在为每天的生存挣扎中。中共提出的所谓‘一个中国’原则本身就是十分可笑的，历史告诉我们真正将中国一分为二的就是中共。是中共在二战唆使日本入侵中国，挑起日本与国民党军队的大战，而自己躲在山沟里面通过女色，谎言，画大饼欺骗无数的穷苦农民加入共产党为自己当炮灰。等到二战结束，日本战败退出中国，国民党元气大伤，而中共坐收渔翁之利乘势反击国民党，最终夺取了中共大陆的控制权。而历史又再一次告诉了我们，在中共掌权后，中国老百姓的苦难才真正的开始了，参与朝鲜战争，100万投降共产党的国民党军队被当炮灰，共产党又枪杀地主，没收土地分给自己，在大丰收的情况下又引发大饥荒，中国人民死了千千万，党内斗争造成文化大革命，各种批斗武斗，中国人民又死了千千万。为了毛泽东的一句话‘人多力量大’疯狂鼓励生育，又为中共在国际上的脸面施行‘一胎政策’，亿万的胎儿被强制扼杀在胎腹中，现在又担心以后奴隶不够用开放‘二胎’‘三胎’政策，中共像对待畜生一样将中国人玩弄于鼓掌之中。现在又想去玩弄台湾人，中共的所作所为真是人神共愤，中共就是比恐怖份子还要邪恶的恐怖份子，中共政权不除，全世界将永远没有安宁。
-
-新闻链接:[https://www.taiwannews.com.tw/en/news/4432321](https://www.taiwannews.com.tw/en/news/4432321)
-
-翻译/简评: kkoto(芬兰大灰狼)
-
-PR:Harvey（叶知秋）
-
-* * *
-
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
-
-
-编辑：【英国伦敦喜庄园编辑部】
-
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+*发布：tianzhihuan*
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
