--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,43 +1,23 @@
 ---
-title: 经历千年万年也扼杀不掉爆料革命五年来七哥的直播视频
+title: 阿尔伯塔省计划提前结束疫苗护照
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1968904/)
+`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/1968995/)
 
-G-TV视频链接：[https://gtv.org/video/id=6200855e585ecc15d73e5c8e](https://gtv.org/video/id=6200855e585ecc15d73e5c8e)
+采编：Spirit           编辑撰稿：硫酸羟氯喹64
+![](https://assets.gnews.org/wp-content/uploads/2022/02/moteur-ohdio-vaccin-vph.jpg)
+据加拿大[环球邮报]2月4 日报道，阿尔伯塔省政府目前正准备在全省范围内停止正在使用的疫苗护照和大部分疫情限制措施。
 
-**郭文贵先生：**这就是对生命的理解。你想想65岁，我（距离）65岁我现在还有十几年，还有十二三年，多少天？5000天，严格讲还不到5000天，4000来天，七哥就嗝屁了走人了，按照人间的说法，我再活50年，1万多天，又能咋地呢？随便中央公园的一棵树都比咱活得时间长，对吧？一切都不会是（你的），你也带不走。
+为此，省长肯尼表示，如果该省医疗系统的疫情压力持续减缓，就将分阶段在2月底之前停止现行的各项防疫措施。并声称，阿省的高疫苗接种率以及下降的病毒感染人数，使得以上决定可行。
 
-但是七哥这五年来直播的视频你想给我扼杀了？万年你也扼杀不掉，包括咱现在此时此刻说的话，那未来得多少人听？多少人看？他们怎么理解？“当时的那个巴黎好漂亮啊！而且叫‘水多’，旁边的大牛跟她双修啥感觉？”大家都会怀疑；然后：“罗西的老师是谁呀？”后来都要了解了解；（画面）上面那个佳佳和王子两口子，“他俩双修啥样啊？”都会研究研究；“雅各为啥出来爆料啊？”
+目前，阿省的所有酒吧，餐馆，影剧院等公共消费及娱乐场所都需要疫苗护照，尽管该措施原则上是自愿进行，但不执行该规定的商家将会在包括降低客户数量等方面受到当局的限制。
 
-这个是万年千年不会变的，这个就是我们的伟大呀，对吧？所以说巴黎，不要在乎时间，65年和75年、85年、1000年没什么差距，瞬间即过。时间是蒙住你眼、蒙住真相的一个工具，跨过时间以后你就是永恒、永生。谢谢！
+据悉，近期以来，肯尼省长受到了来自各界和其他政党越来越大的压力，特别是目前正在渥太华进行的卡车司机抗议运动，都使得当局开始意识到疫苗护照因严重侵犯了个人权利，而必须立即取消。
 
-字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
+校对编辑：硫酸羟氯喹64
 
-编辑整理：Jacques；
+发稿：文明(添草灭共)
 
-字幕文件制作：知津；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+[原文链接](https://www.theglobeandmail.com/canada/article-kenney-to-announce-next-week-the-date-alberta-will-end-its-covid-19/)
 
  
 
