--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,35 +1,40 @@
 ---
-title: 美国众议院通过《美国竞争法》法案
+title: 殡葬产业人揭示中共病毒疫苗造成的大量死亡
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1968597/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1968717/)
 
-**【雅典娜快讯】，紧贴时代脉搏**
+撰稿：妇女之友-电流声
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/pelosi-COMPETES-Act.png)Courthouse News Service
+澳大利亚悉尼不愿意透露姓名的这位从事殡葬产业的女士，不无痛心地告诫人们，尤其是父母亲们，千万不要给孩子打中共病毒疫苗了！
 
+中共病毒疫苗造成的大量死亡：婴儿死亡，年轻人，心脏病，中风，血栓……
 
-**整理：**Eileen（围剿维尼熊）
-**编辑：**翼族
+殡仪馆已经处理不过来。有些地方买新的冰柜（装尸体），一个冰柜可以装20具尸体，八个冰柜装了160具尸体。
 
-根据《联合报》报道：美国联邦众议院2月4日表决通过《美国竞争法》（America COMPETES Act），斥资三千五百亿美元推动美国半导体产业，强化美国对中国大陆的竞争力。法案同时呼吁行政部门将“驻美国台北经济文化代表处”（TECRO）更名为“台湾代表处”（Taiwan Representative Office）。
+大量孩子死亡，千万不要给孩子扎针了。她100%肯定一大波儿死亡正在靠近，但大多数人还没有意识到这个问题。
 
-商务部长雷蒙多称，这是五十年来促进美国竞争力、制造和研发能力的最大投资案。众院科学委员会主席强森表示，这将可帮助美国与中共国“大干一场”。
+1月27日，在昆州的黄金海岸一家接种中共病毒疫苗的诊所里，惨剧再度发生！据凯恩斯新闻报道，上午9：30分一位母亲领着3个6-10岁的女儿来接种了中共病毒疫苗。约接种后30分钟左右，其中一个女孩突然手和面部开始抽搐，脖子僵直。紧接着不到30秒，另一个约9岁的女孩又发生了同样的症状，第三个女孩还不清楚会发生什么。当天下午约5：30-6：00左右闻得噩耗，这两个约6-10岁的小女孩已经死去。
 
-众议院通过法案后，下一步就是参众两院整合版本，分别取得多数议员支持后，才能送交白宫由拜登签署实施。
+还有，在新南威尔士州被诊断出患有中共病毒并去世的18人中：
 
-法案涵盖多项与台湾相关的条款，包括强化美台伙伴关系、协助台湾发展不对称防卫能力、协助台湾有意义参与包括世界卫生大会（WHA）等国际组织、强化美台双边经贸与科技合作。
+1位40多岁
 
-**参考链接**：[美眾院通過抗中挺台法案](https://udn.com/news/story/6813/6078352?from=udn-catebreaknews_ch2)
+3位60多岁
 
-*发布：*翼族
+4位70多岁
 
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+6位80多岁
 
+4位90多岁
+
+2人打了三针；14人打过两次中共病毒疫苗；1人打了一针；一人没有打。
+
+18人死者中，17人打了中共病毒疫苗！
+
+参考来源：[https://discord.com/channels/@me/874996068595667016/940074298037661726](https://discord.com/channels/@me/874996068595667016/940074298037661726)
+
+*编辑&发稿：mgjxs*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
