--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,16 +1,20 @@
 ---
-title: 喜支付将有多种币可支付
+title: 秘翻在线：美武器供应商研发空投物资的无人滑翔机
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968490/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968644/)
 
-文编：东京樱花团/樱花传媒
-视频：东京樱花团/中文小视频组
+**撰稿：billwilliam**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screenshot-2022-02-07-134431.jpg)图源：flightglobal.com
+据《国家利益》报道，一家名为“沉默之箭”（Silent Arrow）的武器供应商研发一款具有滑翔能力的GD-2000空投箱，用来在战场上向士兵空投物资。
 
-2月4日，郭文贵先生在GTV大直播透露，在中共国，不会超过一年时间，H-Pay的人民币支付功能即可实现。转进转出的资金秒到账户，给战友们带来惊喜的同时，中共追踪不到资金的进出，安全稳定的H-Pay还支持多币（种）支付 。
+这款GD-2000一次性空投箱其实就是带有折叠翅膀的箱子，尺寸为2x2x8英尺，可携带16000磅重的负荷。从运输机空中投放后，折叠翅膀打开进行滑翔，利用GPS制导和LiDAR测距仪抵达目标投放点。从25000英尺的空中投放后，空投箱可滑翔飞行40英里。直升机投放也可滑翔15英里（未公布投放高度）。GD-2000空投箱可携带食品、燃料、武器等物资。“沉默之箭”公司希望未来能扩大空投箱，达到可以向一支步兵队伍提供一天正面激烈战斗所需的物资。除了无动力滑翔箱以外，该公司还生产一种有动力的版本，配有180马力电动机，可以从临时跑道起飞。
 
-*编辑：东京樱花团/tdownc2p
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+GD-2000的优点在于其紧凑的外形和无声的隐蔽滑翔能力，不易被敌方探测。同时，其较远的滑翔距离允许运输机在远距离外投放，保证对峙中的安全。据称美国在中东的一个盟国政府近日首次在海外执行任务中使用GD-2000空投箱。该公司公告称他们在37个国家有分销协议，并致力于成为全球空投物资的标准。
+
+这款空投箱可能在未来台海局势中发挥作用，如果战争爆发，美军运输机可以在较远的距离空中投放武器和物资给台湾。
+
+**[信息来源](https://nationalinterest.org/blog/buzz/resupply-gliders-could-be-future-military-logistics-200349)**
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
