--- a/gnews/32.md
+++ b/gnews/32.md
@@ -1,52 +1,41 @@
 ---
-title: 喜马拉雅币一周分析与总结（1月31日-2月6日）
+title: DC大中华时事：冬奥会花费上万亿美元民脂民膏
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/1968380/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1968594/)
 
-作者：纽约香草山金融部 – ILOVE战神
+*编辑：西北风 / 作图：*信正
 
+![](http://himalayawashingtondc.org/wp-content/uploads/2021/08/ScreenShot-2021-08-01-at-17.25.09@2x.png)
 
+#   墙国妄语每日驳
 
-![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
+### **0**2.06.2022
 
+[境外媒体：“冬奥热”令虎年春节生龙活虎\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/china/20220207/2468419.shtml)
 
+***简评：***一个冬奥会，花费上万亿美元民脂民膏，只为突显习太阳光辉伟大，习太阳一心要名垂青史。宁赠友邦，不予家奴，到今天这一点我们还看不透吗？中国历史上各个王朝不都是这样吗。举个例子，北宋徽钦二宗被金人掳走点了天灯之后，宋高宗继位，是为南宋，当时手握重兵的三大将领张俊、岳飞和韩世忠，都被解除了兵权，张俊投靠了秦桧，韩国世忠立马把自己变成闲杂人等，大宋军队怎么能姓岳？谁的江山呀？唯独抗金名将岳飞是宋高宗心腹之患，金人言撼山易，撼岳家军难，宋高宗为了和金人和谈，在收复中原和和保住自己皇权之间高宗没有片刻犹豫选择了后者，只要这江山仍然姓赵，只有半壁又何妨！岳飞当然是宋高宗所杀而非秦桧。国土失于外邦只当赠予，同样，毛泽东承认外蒙古独立换来苏俄支持政权承认，江泽民承认中乌有争议领土归属乌兹别克斯坦换取江政权稳固和江家获得天量财富，同样，习太阳花费上万亿美元的冬奥会和上台后几万亿美元全世界大撒币不同样是为了习太阳自己稳固政权吗？宁赠友邦，不予家奴，中国老百姓现在连家奴也算不上，只是一荐荐的韭菜，老百姓算什么，什么都不是。这就是当权者如此之深的心机吧。这样的政权不亡，恐怕也天理不容。
 
-过去一周喜马拉雅币价格在51美元左右浮动，最高价格约53.8美元，平均日交易量约8万枚喜币。喜币上市以来总交易量约2720万枚 ，占今年总发行量的仅约2.72%。目前喜币交易在全球尚未完全开放，市场交易量较低，价格仍被严重低估。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide10-2.jpg)
-2月1日大年初一，喜支付APP Himalaya Pay正式上线。喜支付上线前后，全球股票市场与数字货币市场都处于大幅下跌区间，喜马拉雅币价格则持续大幅上升。Himalaya Pay支持点对点转账交易，手续费为零，交易立即到账，彻底颠覆了传统金融机构和政府对经济活动的垄断。
+### 02.06.2022
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Capture-7.jpg)
+[外媒评述：北京冬奥会折射“中国梦”耀眼光芒\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/china/20220206/2468354.shtml)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Picture2-3.png)
+***简评：***我们无论身在国内国外，在中国这片土地上普通中国人还有“中国梦”吗？就我自己刚来美国上学打工时常在恶梦中惊醒，梦中常常梦到自己又回中国了，醒来时半天才回过神自己仍在美国，又感觉好庆幸，谁愿意回中共国，只要逃出中共国看到外面文明的世界，谁愿回去，韦石夏业良之类你让他们回中共国他们会回去吗，中共那可真是他们的衣食父母。中国老百姓改革了几十年也就混了个刚刚吃饱肚子，可自我感觉自己已经超英赶美了，那最现实一个问题，改革开放全民起早贪黑，7天24小时无保险无医疗辛勤劳动财富钱去那儿了，中国梦再辉煌再烂灿其体到落实到实物财富上得有具体体现吧。老百姓只收获了恶梦，中共梦只属于中共红色后代和红色的家奴们，他们拿走了中国人民所有的财富，也拿走中国人的美梦。
 
-本周据郭文贵先生在大直播中透露，目前已经存在从中共国将人民币兑换为喜美元HDO的转账通道，并且立刻到账。喜支付未来也会推出多个币种的转账功能。郭先生表示，无中心化、无中介化是喜支付的核心价值。喜支付代表了新中国联邦人的信仰和追求，将帮助全人类解放生产力，实现财务的自由，并为新世界建立金融标准。喜支付将极大提升交易的安全性、经济性、便利性、隐私性，为用户开创全新的商业模式，信用体系和金融服务，并实现财富的保值和显著的投资收益。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Picture3-1.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/02/Picture4-2.png)
-参考链接：
-[喜交所 Himalaya Exchange](https://himalaya.exchange/himalaya-pay)
+### 02.06.2022
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpeg)
+[外媒：美政府研究人员称无需奥密克戎专用疫苗\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/health/20220206/2468374.shtml)
 
-总编：天灭中共
-编辑：飞虹
-校对/发稿：为真不破20
+***简评：***真相就是力量 ，新中囯联邦持续的向全世界传播病毒疫苗真相唤醒了正义的力量，世界黑暗力量再大，我们仍要相信在西方世界，雅典娜自由女神正义力量穿越千年，始终存在，真相大白天下时自由女神的火炬就会照亮一切黑暗。现在美国最高法院否定强制注射疫苗法规是这场持续己2年的病毒危机有了转折点，世界各国开始放弃强制疫苗令，病毒溯源将会成为全球聚焦点，全世界都会向中共追责，恶终是恶报。
 
-**更多资讯，更多关注**
-
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+#   港台资讯
+![](https://media.discordapp.net/attachments/858887785507323904/939724031010156584/DC2.5-2.jpg?width=1040&amp;height=586)![](https://media.discordapp.net/attachments/858887785507323904/939724037846872104/DC2.5-3.jpg?width=1040&amp;height=586)![](https://media.discordapp.net/attachments/858887785507323904/939724038366961734/DC2.5-1.jpg?width=1040&amp;height=586)
 
 
 
-![](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
 
-
+*编辑：*西北风
+*作图：信正
+发布：文顾*
 
  
 
