--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,43 +1,11 @@
 ---
-title: 感受生命意义的人会理解不为名利灭邪恶的爆料革命运动
+title: 卢比奥议员认为NBC不应从北京冬奥会转播牟利
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1968806/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1968896/)
 
-G-TV视频链接：[https://gtv.org/video/id=620017fd585ecc15d73e3708](https://gtv.org/video/id=620017fd585ecc15d73e3708)
+02/02/2022 参议员马可·卢比奥：我认为NBC不应该从转播奥运会中赚取一分钱。我们不应该允许把一个由种族灭绝的共产主义政府主办的奥运会利益化。
 
-**郭文贵先生：**而且我越来越能感受到生命的意义真是太奇妙、太美好！如果说你现在人要活着能活1000岁，你选择（活到1000）还是65岁？我选择1000岁，我不活65岁，那肯定的。但是关键你要让我65岁活到1000岁这个中间像王岐山这样的活着、像路大脑袋这样的活着，我马上就死，我不想活着，是吧？如果没有价值、没有意义活着，多一天都不想活。如果我能用我的生命来证明生命的意义的话，我马上就可以做。
-
-所以说我觉得我不希望看到生活中现在就太多…..我从十几岁跟我打交道的都是中年人、老年人，当年的将军，你像郑永乐先生（注：同音字）是北京炮兵部部长，你说我一个十几岁的孩子，比现在看到的照片还早呢，是吧？我见过多少老年人？他能咋地呢？对不对呀？
-
-所以当你们能明白这个的时候就知道我们真的是人类上唯一一个，这个运动不为钱、不为性、不为名、不为任何有个人利益的，就是想灭掉邪恶，就这么纯洁，就这么纯洁！我们啥也不在乎，啥都不在乎。
-
-字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
-
-编辑整理：Jacques；
-
-字幕文件制作：知津；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
  
 
