--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,24 +1,23 @@
 ---
-title: 为什么冬奥会筹备很久还会状况频频（三）
+title: 岸田首相为保支持率把东京和大阪推向疫苗接种最前沿
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968745/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968839/)
 
-#### 整理：雅典娜速记组
-编辑：开智则立
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8-40～8-50～3.png)
-如果俄罗斯人穿的吃的不是今天这个样子，像白人的生活方式和所谓的有托尔斯泰这样的大咖，有什么喀秋莎走在莫斯科郊外的这些红歌，恩格斯列宁那个长相大胡子，共产党才不跟他玩儿。共产党就是找一个托词，名正言顺，而且让中国人觉得这个人种比咱强，这个朋友交的比咱棒，中国 人交朋友一定交有钱有权的，谁爱交穷人！包括你们！现在加入新中国联邦了你发现要交有信仰的人，在这过去你不交穷人，你认为这是正确的。中国人的骨子里就是崇洋媚外，宠强欺弱。所以这一系列的文化、信仰、宗教、历史原因，就让共产党把他俄爹摆来摆去。找了那么多爹这个爹最合适。而且这个爹越虐他，虐他千遍不厌倦，他享受在其中。
+撰稿：东京樱花团/待命（文晓）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-629.png)（图片源自本文链接）
+2月7日共同通信社消息：由自卫队运营的中共病毒(新冠病毒Covid-19)疫苗大规模接种活动于7日正式开始。东京会场每天的接种人数比前一周增加了三倍，达到2160人。大阪会场也在一栋民间建筑中开始了疫苗接种。
 
-那么共产党既无这个能力，他经济上、组织上无这个能力，加上内部的仇恨，就导致了今天你看到的冬奥会荒唐的结果。这些事情发生中国老百姓不知道？你真的不知道？你觉得那3000多人的代表会到北京开会，他吃的就很好？没人尿他碗里边？我告诉你哪年都有。你们好好上网络查一查当年百度都报道过，在这个西山宾馆，有服务员所谓的家里有人上访，辽宁的，由于上访的恼怒，给中央领导会场尿尿的事情记得吧？你去百度查查这个人，就是葫芦岛人。我还跟他开玩笑我说你是来自于葫芦岛，葫芦岛是印钞票的地方，你上访还为了点儿钱啊？结果他跟我说：七哥，我在京西宾馆，我逮着机会我就把这帮孙子给炸了！但是真是干不了，我们最后支出了40万块钱，把他从监狱里救出来。哇塞，你一唱歌让人认为自己都是奴隶，要砸奴隶主，我告诉你，俄罗斯就是奴隶主的创造者。
+东京10日开始，配额逐渐增加到每天5,040人。大阪也为扩大接种规模而开始选择场地。首相岸田文雄在下议院预算委员会会议上说：将在14日之前把接种者人数扩大到每天约2500人。
 
-*发布：开智则立*
+政府希望吸引大量申请者到自卫队会场接种，呼吁加快第三轮疫苗接种，因为第三轮疫苗接种被批评拖延了。
 
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+现在，与2020年初病毒刚刚开始流行时不同，已经有那么多病毒专家和医生们开始为正义发声，揭露疫苗真相了。作为一个科技先进国家的政府，难道会一点信息都没有吗？可为什么还会有人批评政府推进疫苗接种工作不够及时呢？这些人居心何在呢？作为首相的岸田，难道就那么在意来自这些人的支持率吗？
 
+信息来源：[自衛隊接種が本格稼働 東京3倍、大阪来週拡大へ (msn.com)](https://www.msn.com/ja-jp/news/national/%E8%87%AA%E8%A1%9B%E9%9A%8A%E6%8E%A5%E7%A8%AE%E3%81%8C%E6%9C%AC%E6%A0%BC%E7%A8%BC%E5%83%8D-%E6%9D%B1%E4%BA%AC3%E5%80%8D-%E5%A4%A7%E9%98%AA%E6%9D%A5%E9%80%B1%E6%8B%A1%E5%A4%A7%E3%81%B8/ar-AATxA7r?ocid=msedgntp)
+
+*校对：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
