--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,40 +1,44 @@
 ---
-title: 殡葬产业人揭示中共病毒疫苗造成的大量死亡
+title: 接种中共病毒疫苗后将提高癌症复发率
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1968717/)
+`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/1968817/)
 
-撰稿：妇女之友-电流声
+**疫苗（新冠疫苗）
+中共病毒（新冠病毒covid-19）**
 
-澳大利亚悉尼不愿意透露姓名的这位从事殡葬产业的女士，不无痛心地告诫人们，尤其是父母亲们，千万不要给孩子打中共病毒疫苗了！
+**我们不反疫苗，只针对假疫苗
+我们不反科学，只针对反人类**
 
-中共病毒疫苗造成的大量死亡：婴儿死亡，年轻人，心脏病，中风，血栓……
+编译：赵圣欢
+![](https://assets.gnews.org/wp-content/uploads/2022/02/截屏2022-02-07-14.27.31.png)
+如果给每个讲述自己挚友经历者一美金报酬，而他的癌症在中共病毒疫苗发作前处于缓解期，可在接种后不久就变得无法控制，我便可以挂印封金，老于泉林。
 
-殡仪馆已经处理不过来。有些地方买新的冰柜（装尸体），一个冰柜可以装20具尸体，八个冰柜装了160具尸体。
+DMED数据库显示，在推出中共病毒疫苗后，癌症发病率上升了3倍。参见《战争行动》：拜中共病毒「疫苗」所赐，军方的癌症发病率增加了两倍多。 在与瑞安•科尔（Ryan Cole）谈论这个问题时，他认为这主要是由于加速了现有的癌症（人们已知道自身所患癌症或出乎人们料想的新癌），而不是创造新的癌症病例。
 
-大量孩子死亡，千万不要给孩子扎针了。她100%肯定一大波儿死亡正在靠近，但大多数人还没有意识到这个问题。
+考虑一下我在2022年2月5日收到的这两封电子邮件，它们代表了我一直看到的评论： 我看了《第二观点》，想知道你是否找到了所谈事项的任何相关信息。我感兴趣的主题是添加到MRNA（信使核糖核酸）疫苗中的未转译的人类基因，这些基因是否可能对免疫系统如何追踪癌细胞产生不利影响正在讨论中 – 以减少对疫苗的炎症反应。 我看过几篇文章，其中有特定患者的案例研究，这些患者的癌症在接种疫苗后急剧恶化。
 
-1月27日，在昆州的黄金海岸一家接种中共病毒疫苗的诊所里，惨剧再度发生！据凯恩斯新闻报道，上午9：30分一位母亲领着3个6-10岁的女儿来接种了中共病毒疫苗。约接种后30分钟左右，其中一个女孩突然手和面部开始抽搐，脖子僵直。紧接着不到30秒，另一个约9岁的女孩又发生了同样的症状，第三个女孩还不清楚会发生什么。当天下午约5：30-6：00左右闻得噩耗，这两个约6-10岁的小女孩已经死去。
+及
+我私下认识两个人，他们现在患有非常严重的癌症……我昨天和我的医生交谈，她说她的一个病人在周一被诊断出癌症，到上周四死亡。她以前没有癌症…[\[email protected\]](/cdn-cgi/l/email-protection)
+及
 
-还有，在新南威尔士州被诊断出患有中共病毒并去世的18人中：
+正是如此！我知道的三个人癌症正在康复期，注射疫苗后病症卷土重来；现在其中两人已病亡，第三人正接受全身化疗。我为其他所有携带BRCA基因的朋友深表担忧。
+及
+![](https://assets.gnews.org/wp-content/uploads/2022/02/PHOTO-2022-02-07-14-20-14.jpg)
+且这些推文表明，疫苗可以产生新的癌症：
+![](https://assets.gnews.org/wp-content/uploads/2022/02/PHOTO-2022-02-07-14-20-22.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/02/PHOTO-2022-02-07-14-20-31.jpg)
 
-1位40多岁
 
-3位60多岁
+至少，当接种疫苗后，你突然癌症复发或出现新的癌症时，不要感到诧异。
 
-4位70多岁
+总结
 
-6位80多岁
+如果您最近接种了疫苗，并且您以前受到控制的癌症病情急转直下，罪魁祸首很可能是您接种的”安全有效”疫苗。
 
-4位90多岁
+参考链接：[Cancers coming back with a vengeance is very common after the COVID vax](https://stevekirsch.substack.com/p/cancers-coming-back-with-a-vengeance)
 
-2人打了三针；14人打过两次中共病毒疫苗；1人打了一针；一人没有打。
+审核校对：Barry Jack
+上传排版：F
 
-18人死者中，17人打了中共病毒疫苗！
-
-参考来源：[https://discord.com/channels/@me/874996068595667016/940074298037661726](https://discord.com/channels/@me/874996068595667016/940074298037661726)
-
-*编辑&发稿：mgjxs*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
