--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,31 +1,31 @@
 ---
-title: 渥太华市长宣布进入紧急状态 以应对卡车运输的封锁
+title: 首批美军抵达波兰增援北约应对俄乌危机
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968664/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1968782/)
 
-撰稿：东京樱花团/asket
+**撰稿：日本东京方舟农场 子辰**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/渥太华市长宣布进入紧急状态-以应对卡车运输的封锁.png)[**图片来源**](https://www.aljazeera.com/news/2022/2/7/emergency-in-ottawa-over-out-of-control-truckers-protest%20)
+据大纪元2月6日报道，在俄乌关系紧张之际，首批增援北约（NATO）的美军于2月5日抵达波兰东南部的一个军事基地。
 
-渥太华市长吉姆-沃森周日宣布进入紧急状态，以处理抗议的卡车司机为期10天的空前占领。卡车司机队伍已封锁了加拿大首都的大部分中心。沃森在一份声明中强调需要其他管辖区和各级政府的支持。沃森在当天早些时候说，示威者的人数超过了警察，并控制了局势，他没有详细说明他可能采取的措施。
+据波兰军方发言人利普钦斯基（Przemyslaw Lipczynski）少校告诉波兰新闻社（PAP），一架载有美国指挥人员的小型Beechcraft C-12 Huron飞机于周六上午10点左右降落在热舒夫军事基地。该基地靠近波兰与乌克兰边界。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/7C8BF2BC-5F7B-4E21-98C5-D1E60D71398B_1_201_a.jpeg)（图片来自《大纪元》）
+利普钦斯基证实，约1700名驻扎在北卡罗来纳州的第82空降师士兵将空降波兰。这是一支精英快速反应部队，过去跟波兰军队在伊拉克、阿富汗共同执行任务。
 
-“自由卡车车队 “的抗议活动最初是由对穿越美加边境的卡车司机发起的，他们因抗议强制接种疫苗政策而自发组织队伍，但现在演变成对COVID-19健康限制和总理贾斯汀-特鲁多政府的更广泛抗议。
+此前，美国总统拜登1月2日下令向波兰和罗马尼亚增派近3000名士兵，以保护东欧免遭乌克兰危机的潜在影响。
 
-加拿大公共安全部长马可-门迪奇诺星期天说，政府在这个问题上不会退缩。渥太华警方周日重新安置了一些抗议者，并设置了新的路障，称他们正在 “收集财务、数字、车辆登记……以及其他将用于刑事起诉的证据”。他们还宣布，他们将取缔试图携带油罐为封锁市中心大部分道路的，数百辆大卡车加油的行为。
+与此同时，就在美国部队特遣队抵达之际，俄罗斯国防部宣布，它已派出一对具有远程核能力的轰炸机在莫斯科盟友白俄罗斯上空巡逻，白俄罗斯与波兰接壤。
 
-周六，在与渥太华官员的紧急会议上，警察局长彼得-斯洛利抱怨说，他缺乏资源来结束他所谓的 “围困”，并要求增援。大约250名加拿大皇家骑警，一支联邦部队，将很快抵达该市。
+据悉，俄罗斯一直否认有入侵乌克兰的计划，但在乌克兰边境附近部署了十多万名士兵。在过去的外交谈判中，俄罗斯一直要求北约不许东扩，包括北约承诺永不接纳乌克兰，否则俄罗斯可能会采取军事措施。
 
-而市议会议员戴安-迪恩斯周六在谈到抗议者时，定义卡车司机队为”这是一个全国性的叛乱。这是疯狂的”。
+美国和北约都拒绝了俄罗斯的要求。俄罗斯总统普京则表态，莫斯科准备与华盛顿及其北约盟国进行更多会谈。
 
-加拿大民间和官方各有各的立场，可以看到加拿大社会的撕裂。郭先生在直播中提醒大家，不要以新中国联邦的名义参加任何卡车司机运动，以免重演如2021年1月6日美国华盛顿的“暴乱”运动。
+参考链接：
+[https://www.epochtimes.com/b5/22/2/5/n13557381.htm](https://www.epochtimes.com/b5/22/2/5/n13557381.htm)
 
-信息来源：
+素材采编：子辰
+编辑：青城道姑
+发布：文曦
 
-[**渥太华市长宣布进入紧急状态 以应对卡车运输的封锁**](https://www.aljazeera.com/news/2022/2/7/emergency-in-ottawa-over-out-of-control-truckers-protest%20)
-
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
