--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,19 +1,33 @@
 ---
-title: 雅典娜时报-第197期
+title: 美国众议院通过《美国竞争法》法案
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1968467/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1968597/)
 
-#### **《雅典娜时报》汇聚全球新闻时事**
+**【雅典娜快讯】，紧贴时代脉搏**
 
-#### 编辑：精灵蓝
-排版：小蚂蚁614
-![圖片](https://media.discordapp.net/attachments/825592691433668612/940055590200291358/155_4.png?width=768&amp;height=1144)![圖片](https://media.discordapp.net/attachments/825592691433668612/940055590787481621/155_3.png?width=768&amp;height=1144)
-*发布：陶子*
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/pelosi-COMPETES-Act.png)Courthouse News Service
 
-**更多资讯，请关注：
+
+**整理：**Eileen（围剿维尼熊）
+**编辑：**翼族
+
+根据《联合报》报道：美国联邦众议院2月4日表决通过《美国竞争法》（America COMPETES Act），斥资三千五百亿美元推动美国半导体产业，强化美国对中国大陆的竞争力。法案同时呼吁行政部门将“驻美国台北经济文化代表处”（TECRO）更名为“台湾代表处”（Taiwan Representative Office）。
+
+商务部长雷蒙多称，这是五十年来促进美国竞争力、制造和研发能力的最大投资案。众院科学委员会主席强森表示，这将可帮助美国与中共国“大干一场”。
+
+众议院通过法案后，下一步就是参众两院整合版本，分别取得多数议员支持后，才能送交白宫由拜登签署实施。
+
+法案涵盖多项与台湾相关的条款，包括强化美台伙伴关系、协助台湾发展不对称防卫能力、协助台湾有意义参与包括世界卫生大会（WHA）等国际组织、强化美台双边经贸与科技合作。
+
+**参考链接**：[美眾院通過抗中挺台法案](https://udn.com/news/story/6813/6078352?from=udn-catebreaknews_ch2)
+
+*发布：*翼族
+
+**更多资讯，请关注：****
 **[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
 [澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
