--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,25 +1,33 @@
 ---
-title: 所有人都恨习太阳一个人的“冬奥会”
+title: 菲律宾中央银行表示不太可能发行数字货币
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968841/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1968975/)
 
-#### 整理：雅典娜速记组
-编辑：开智则立
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8-45～8-50～1.png)
-战友问：中共花巨资邀请世界上所谓的这些虚伪的政客来参加冬奥会的开幕式，那按照常理的逻辑，应该是把这些领导人都照顾好，为什么会出现现在这种状况？
+整理/编辑：小红帽
 
-七哥：很简单！就像男女在一起，最后想再坚持20秒但能力不及。现在中国的经济，政治协调能力不及坚持不了20秒，就是好吃好喝的。它的钱和整个协调能力都不济了。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/雅典娜快讯图.png)图片来源：雅典娜设计组
 
-第二、就是在党内，对这次所谓的习太阳本人的冬奥会，大家都恨，都是被绑架了。你觉得到现场工作的验病毒的人和天天被弄去表演的人， 只有那些朝阳群众？那些傻孩子，穷苦老百姓们，一辈子没见过摄像机，逮住上摄像机了，就是个表演的奴隶。剩下那些当官的，还有有脑子的人，包括张艺谋这些人，哪个愿意参加啊？天天有病毒的危险，恨啊！就是内部的仇恨以及这次所谓习太阳一人的表演。
 
-第三、就是现在整个国内的病毒，已经到了大家无法想象的程度，带着内部的恐惧，内部的病毒带来的威胁，谁愿意干这个？很多人都恨这帮运动员，你们到中国，明知道这是一个虐待奴隶的地方，这是一个金钱交易的结果，你还往这儿冲，这些人骨子里面很多人是看不惯的。
+根据《BusinessWorld》2月7日报道， 据菲律宾中央银行行长本杰明·E·迪奥克诺（Benjamin E. Diokno）称，菲律宾中央银行（BSP）不太可能在短期内发行自己的央行数字货币（CBDC）。
 
-早在几个月以前，西方世界开始调查这次冬奥会所有奥林匹克委员会有多少人在中国拿到了利润。我告诉大家你看看，国际奥林匹克委员会有多少次换主席? 什么萨马兰奇？多少次腐败？哪次腐败不都是跟申请奥运会和开奥运会有关系？我觉的人类有奥林匹克精神之外，奥林匹克之神在上天都会怒它！就是中国共产党已经把奥林匹克国际体育组织变成了真的是让它威胁的一个小姐。
+迪奥克诺先生在一份报告中告诉《全球资源合作伙伴》（Global Source Partners），菲律宾中央银行没有计划在短期内推出央行数字货币，主要是因为该国缺乏有效的支付和结算系统，人们仍然严重依赖现金。
 
-*发布：开智则立*
+迪奥克诺先生表示，菲律宾中央银行的技术工作组已经与其他中央银行、技术服务提供商、其他机构甚至小企业就可能的中央银行发展中心的使用案例进行了磋商。目前，他们正在加强国内的零售支付系统。
 
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+中央银行希望，到2023年，一半的交易将在网上完成。2020年，大约20%的支付是通过数字方式完成的。
+
+经济学人信息部的行业经理斯瓦鲁普·古普塔（Swarup Gupta）说，该国的国家身份证或菲律宾身份识别系统（PhilSys）的开发，在菲律宾中央银行未来发行的任何央行数字货币中是关键。
+
+国家经济和发展局早些时候表示，超过5000万菲律宾人已经完成了国家身份证的人口和生物识别数据收集。
+
+古普塔先生说，采用央行数字货币存在重大挑战和风险，这可能是菲律宾中央银行在考虑零售央行数字货币时犹豫不决的原因。
+
+新闻链接：[BSP unlikely to issue digital currency](https://www.bworldonline.com/bsp-unlikely-to-issue-digital-currency/)
+
+*发布： tianzhihuan*
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
 [澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
 [澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
 [澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
