--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,19 +1,155 @@
 ---
-title: 中央春晚的藏污纳垢
+title: 中共与经济脱钩就是脱离了对老百姓的经济控制
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968838/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1968913/)
 
-#### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
-视频定位：BENJ1；WEI
+[https://gtv.org/video/id=620055b0585ecc15d73e4b04](https://gtv.org/video/id=620055b0585ecc15d73e4b04)
 
-*发布：陶子*
+一个劳斯莱斯发动机
+Un motor Rolls Royce
 
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena](https://twitter.com/HimalayaAthena1)
-[澳大利亚墨尔本农场Gettr：himalayaathena](http://gettr.com/user/himalayaathena)
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](http://xn--discord-cu4k86skkas5c126a4lez1be9fmukp34csc6a3e9m/)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](http://gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+还有一个美国通用的发动机
+Y un motor general de EE. UU
+
+你知道多少专利吗
+Sabes hay cuántos patentes
+
+4000种专利
+4000 patentes
+
+你申请完4000种专利
+Luego que termines de solicitar los 4000 patentes
+
+大概需要50年
+Se necesita aproximadamente 50 años
+
+而且你都能做得到, 就今天申请
+Y lo puedes hacer, lo solicitas hoy
+
+一个大飞机的材料
+Los materiales para un gran avión
+
+材料涉及上千种的专利
+Los materiales involucran miles de patentes
+
+你错了, 你重新来一把
+Si te equivocas, debes comenzar de nuevo
+
+一架飞机将近十几万种的高科技
+Casi cientos de miles de alta tecnología en un avión
+
+所以它叫墓碑科技
+Por eso se llama tecnología de lápidas sepulcral
+
+是西方通过一次次技术失败掉下来死人
+El que ha caído y muerto por fallas técnicas una y otra vez en el occidente
+一战二战之后搞起来的
+Logrado luego de la primera y segunda guerra mundial
+
+你怎么给我长出来
+Cómo se hizo
+
+他说919（中国商飞C919大型客机）一定要献礼, 十八大献礼
+Él dijo que el COMAC C919 debía ser un regalo, un regalo para el 18º Congreso Nacional del PCCh
+
+我说你要18大能献上礼
+Digo que si puedes ofrecer el regalo en el 18º Congreso Nacional
+
+我说你把我用那飞机(机翼)什么的把我给砍了, 我都愿意
+Estoy dispuesto a que me mates con ese avión (ala) o algo así
+
+弄死我, 我第一个我说
+Mátame, fui el primero en decir
+
+你先把我给砸死了
+Mátame primero
+
+所以中国人什么都是假的
+Por eso todo es falso en los chinos
+
+所以你没有任何高科技
+Si no tienes ninguna alta tecnología
+
+你中国生产啥, 你告诉我
+Qué puede producir China, dime tú
+
+从甘肃到广西
+Desde Gansu hasta Guangxi
+
+中国除了给当官生产虫草
+Además de producir ophiocordyceps sinensis para funcionarios en China
+
+夜总会, 东北的烤鹅, 大饼子
+Discotecas, gansos Asado del Noreste, tortitas
+
+福建的吃蛇, 广东的吃蛇
+En Fujian y Guangdong comen serpientes
+
+还有什么蝙蝠
+Y que si murciélagos
+
+你告诉我你生产啥呀
+Dime qué vas a producir
+
+粮食大部分进口
+La mayoría de los alimentos son importados
+
+高科技几乎是零
+La alta tecnología es casi cero
+
+连圆珠笔芯都造不出来
+Ni siquiera puede hacer una recarga de bolígrafo
+
+马桶盖都造不出来
+Ni puede hacer una tapa de inodoro inteligente
+
+你穿的衣服几乎都是化学的
+Las ropas que usas casi todas son químicas
+
+你的水都是被污染的, 你告诉我你靠啥呀
+El agua es contaminada, dime con qué te puedes depender
+
+所以中国老百姓
+Por eso el pueblo chino
+
+你脱了钩
+Si te liberas
+
+你就是脱了假, 脱了险
+Significa que te libras de la falsedad y del peligro
+
+第三, 共产党脱了钩就脱啥呀
+Tercero, qué sucede si te liberas del Partido Comunista
+
+你们就脱了控
+Te liberas del control
+
+共产党就是用所谓的经济控制你
+El Partido Comunista te controla a través del llamado economía
+
+让你当奴隶
+Para que seas su esclavo
+
+* * *
+
+日期：02/03/2022
+原视频标题：中共与经济脱钩就是脱离了对老百姓的经济控制
+La desvinculación del PCCh de la economía significa romper con el control económico hacia el pueblo
+
+原视频日期：01/23/2022
+原视频网址：**[https://gettr.com/post/pq03fp1a85](https://gettr.com/post/pq03fp1a85)**
+任务编号：KC441（3573）
+视频时间段：0:00-02:05
+西听校：洛杉矶盘古农场- 霙霙（文霙）
+翻译：洛杉矶盘古农场- 小文萱
+翻译终校：洛杉矶盘古农场- 霙霙（文霙）
+字幕+视频制作：洛杉矶盘古农场-Jambo
+审片：洛杉矶盘古农场-银龙
+发布：洛杉矶盘古农场-恩典
+[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
+洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+
+[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
 
  
 
