--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,26 +1,43 @@
 ---
-title: 为什么要追求喜马拉雅（二）
+title: 经历千年万年也扼杀不掉爆料革命五年来七哥的直播视频
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968837/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1968904/)
 
-整理：雅典娜速记组
-编辑：tianzhihuan
+G-TV视频链接：[https://gtv.org/video/id=6200855e585ecc15d73e5c8e](https://gtv.org/video/id=6200855e585ecc15d73e5c8e)
 
-为啥追求喜马拉雅？当时海外的欺民贼攻击我的时候，当他们说郭文贵一手烂牌，不知道怎么打的时候，我真的是在那个18楼哈哈哈哈大笑，我那个笑声我觉得真的震到天了，也真的像拍电影一样，就像那武侠小说，我觉得我真的把纽约曼哈顿那种震垮的感觉，我笑了很久。就是他们，我知道这人是没希望了，就你告诉郭文贵我怎么打牌？我都能印出154张牌，不是54张牌，你告诉我解释解释喜马拉雅的意义，他都不知道，他应该看出郭文贵的神秘和他的深思熟虑，我就想完了，这帮人完了，这不是对牛弹琴了，这是与猪弹琴了。
+**郭文贵先生：**这就是对生命的理解。你想想65岁，我（距离）65岁我现在还有十几年，还有十二三年，多少天？5000天，严格讲还不到5000天，4000来天，七哥就嗝屁了走人了，按照人间的说法，我再活50年，1万多天，又能咋地呢？随便中央公园的一棵树都比咱活得时间长，对吧？一切都不会是（你的），你也带不走。
 
-你必须问一个问题，为什么他吃猪食，他不吃馒头，吃包子，人为什么不吃猪食啊？现在猪告诉人家说，你郭七，你个傻货竟然吃大包子，你看，我这猪食吃多好啊，那你发现原来这是猪啊，这一群猪啊，原来我的市场这么大，我就继续吃我的，那你吃你的猪食把。我用了几年证明了这个。当我说一切都是刚刚开始的时候，欺民贼就骂我，攻击我，共产党说这个傻子，一切都是刚刚开始你永远都不会结束，他就不知道“一切都是刚刚开始”这句话，是从什么时候开始的？罗马时代，波斯人是人类文明的开始，你看当年波斯打仗的时候在前面的，一切都是刚刚开始。
+但是七哥这五年来直播的视频你想给我扼杀了？万年你也扼杀不掉，包括咱现在此时此刻说的话，那未来得多少人听？多少人看？他们怎么理解？“当时的那个巴黎好漂亮啊！而且叫‘水多’，旁边的大牛跟她双修啥感觉？”大家都会怀疑；然后：“罗西的老师是谁呀？”后来都要了解了解；（画面）上面那个佳佳和王子两口子，“他俩双修啥样啊？”都会研究研究；“雅各为啥出来爆料啊？”
 
-没人懂他，就没有人真正懂人类的历史文明的历史，耶稣告诉你，现在从十字架下来了，他从十字架下来了，活着回来了，证明给你，我是神，我能活着。第一句话，一切都是他。没人解读过。所以说今天雷蒙问得好，喜马拉雅山就是耶稣复活的故事。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/为什么要追求喜马拉雅（二）-.jpg)
-2022年1月7日文贵大直播
+这个是万年千年不会变的，这个就是我们的伟大呀，对吧？所以说巴黎，不要在乎时间，65年和75年、85年、1000年没什么差距，瞬间即过。时间是蒙住你眼、蒙住真相的一个工具，跨过时间以后你就是永恒、永生。谢谢！
 
-*发布：tianzhihuan*
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
+
+编辑整理：Jacques；
+
+字幕文件制作：知津；
+
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
