--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,29 +1,23 @@
 ---
-title: 所有人都恨习太阳一个人的“冬奥会”
+title: 阿尔伯塔省计划提前结束疫苗护照
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968841/)
+`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/1968995/)
 
-#### 整理：雅典娜速记组
-编辑：开智则立
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8-45～8-50～1.png)
-战友问：中共花巨资邀请世界上所谓的这些虚伪的政客来参加冬奥会的开幕式，那按照常理的逻辑，应该是把这些领导人都照顾好，为什么会出现现在这种状况？
+采编：Spirit           编辑撰稿：硫酸羟氯喹64
+![](https://assets.gnews.org/wp-content/uploads/2022/02/moteur-ohdio-vaccin-vph.jpg)
+据加拿大[环球邮报]2月4 日报道，阿尔伯塔省政府目前正准备在全省范围内停止正在使用的疫苗护照和大部分疫情限制措施。
 
-七哥：很简单！就像男女在一起，最后想再坚持20秒但能力不及。现在中国的经济，政治协调能力不及坚持不了20秒，就是好吃好喝的。它的钱和整个协调能力都不济了。
+为此，省长肯尼表示，如果该省医疗系统的疫情压力持续减缓，就将分阶段在2月底之前停止现行的各项防疫措施。并声称，阿省的高疫苗接种率以及下降的病毒感染人数，使得以上决定可行。
 
-第二、就是在党内，对这次所谓的习太阳本人的冬奥会，大家都恨，都是被绑架了。你觉得到现场工作的验病毒的人和天天被弄去表演的人， 只有那些朝阳群众？那些傻孩子，穷苦老百姓们，一辈子没见过摄像机，逮住上摄像机了，就是个表演的奴隶。剩下那些当官的，还有有脑子的人，包括张艺谋这些人，哪个愿意参加啊？天天有病毒的危险，恨啊！就是内部的仇恨以及这次所谓习太阳一人的表演。
+目前，阿省的所有酒吧，餐馆，影剧院等公共消费及娱乐场所都需要疫苗护照，尽管该措施原则上是自愿进行，但不执行该规定的商家将会在包括降低客户数量等方面受到当局的限制。
 
-第三、就是现在整个国内的病毒，已经到了大家无法想象的程度，带着内部的恐惧，内部的病毒带来的威胁，谁愿意干这个？很多人都恨这帮运动员，你们到中国，明知道这是一个虐待奴隶的地方，这是一个金钱交易的结果，你还往这儿冲，这些人骨子里面很多人是看不惯的。
+据悉，近期以来，肯尼省长受到了来自各界和其他政党越来越大的压力，特别是目前正在渥太华进行的卡车司机抗议运动，都使得当局开始意识到疫苗护照因严重侵犯了个人权利，而必须立即取消。
 
-早在几个月以前，西方世界开始调查这次冬奥会所有奥林匹克委员会有多少人在中国拿到了利润。我告诉大家你看看，国际奥林匹克委员会有多少次换主席? 什么萨马兰奇？多少次腐败？哪次腐败不都是跟申请奥运会和开奥运会有关系？我觉的人类有奥林匹克精神之外，奥林匹克之神在上天都会怒它！就是中国共产党已经把奥林匹克国际体育组织变成了真的是让它威胁的一个小姐。
+校对编辑：硫酸羟氯喹64
 
-*发布：开智则立*
+发稿：文明(添草灭共)
 
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+[原文链接](https://www.theglobeandmail.com/canada/article-kenney-to-announce-next-week-the-date-alberta-will-end-its-covid-19/)
 
  
 
