--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,43 +1,25 @@
 ---
-title: 接种中共病毒疫苗后将提高癌症复发率
+title: 中共认俄爹的本质和今天冬奥会的荒唐结果
 ---
-`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/1968817/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968979/)
 
-**疫苗（新冠疫苗）
-中共病毒（新冠病毒covid-19）**
+#### 整理：雅典娜速记组
+编辑：开智则立
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8-45～8-50～2.png)
+刚才亨利说，共产党这么买俄爹的事儿。我告诉大家，第一，共产主义的亲爹就是俄罗斯来的。现在俄罗斯的共产党虽然没有实权，但它还是世界上最大的共产主义大本营。共产主义就是邪恶的独裁者，不受法律约束的，以为人民服务为名义的奴隶组织。大家记得国际歌吗？起来！不愿做奴隶的人们，那个歌一唱，哇塞，唱歌的人认为自己都不是奴隶，自己都是奴隶主。结果告诉你，唱歌的都是奴隶，俄罗斯就是奴隶主的创造者。中共国骨子里边儿，对白人恨，但是人家西方的白人真不跟你玩儿，没几 个跟它玩儿的，它只能选择有点儿像白人的俄罗斯。而且俄罗斯又吃它这一套，愿意勾兑，又是共产主义的来源。然后它拿着这个东西忽悠中国人，咱在世界不孤独。然后呢，特别是俄罗斯有这个武器的优越性，它就来了，如果俄罗斯人穿的吃的不是今天这个样子，像白人的生活方式和所谓的有托尔斯泰这样的大咖，要不是有《莫斯科郊外的晚上》等这些红歌和共产主义恩格斯列宁那个长相大胡子，共产党才不跟它玩儿。
 
-**我们不反疫苗，只针对假疫苗
-我们不反科学，只针对反人类**
+共产党，就是找一个托儿，名正言顺，让中国人觉得这个人种比咱强，这个朋友交的比咱棒。中国人交朋友一定交有钱有权的，谁爱交穷人。中国人骨子里是崇洋媚外，欺善怕恶的。所以这一系列的文化、信仰、宗教、历史原因，就让共产党把俄爹摆来摆去，找了那么多爹，就这个爹最合适，而且这个爹虐它千遍不厌倦！它享受在其中。
 
-编译：赵圣欢
-![](https://assets.gnews.org/wp-content/uploads/2022/02/截屏2022-02-07-14.27.31.png)
-如果给每个讲述自己挚友经历者一美金报酬，而他的癌症在中共病毒疫苗发作前处于缓解期，可在接种后不久就变得无法控制，我便可以挂印封金，老于泉林。
+那么共产党经济上无能力，组织上无能力加上内部的仇恨，就导致今天你看到冬奥会荒唐的结果。这些事情发生中国老百姓你不知道？你真的不知道？你觉得那3000多人的代表到北京开会，他们吃得就很好？没人尿他们碗里边？我告诉你哪都会有！
 
-DMED数据库显示，在推出中共病毒疫苗后，癌症发病率上升了3倍。参见《战争行动》：拜中共病毒「疫苗」所赐，军方的癌症发病率增加了两倍多。 在与瑞安•科尔（Ryan Cole）谈论这个问题时，他认为这主要是由于加速了现有的癌症（人们已知道自身所患癌症或出乎人们料想的新癌），而不是创造新的癌症病例。
+*发布：开智则立*
 
-考虑一下我在2022年2月5日收到的这两封电子邮件，它们代表了我一直看到的评论： 我看了《第二观点》，想知道你是否找到了所谈事项的任何相关信息。我感兴趣的主题是添加到MRNA（信使核糖核酸）疫苗中的未转译的人类基因，这些基因是否可能对免疫系统如何追踪癌细胞产生不利影响正在讨论中 – 以减少对疫苗的炎症反应。 我看过几篇文章，其中有特定患者的案例研究，这些患者的癌症在接种疫苗后急剧恶化。
-
-及
-我私下认识两个人，他们现在患有非常严重的癌症……我昨天和我的医生交谈，她说她的一个病人在周一被诊断出癌症，到上周四死亡。她以前没有癌症…[\[email protected\]](/cdn-cgi/l/email-protection)
-及
-
-正是如此！我知道的三个人癌症正在康复期，注射疫苗后病症卷土重来；现在其中两人已病亡，第三人正接受全身化疗。我为其他所有携带BRCA基因的朋友深表担忧。
-及
-![](https://assets.gnews.org/wp-content/uploads/2022/02/PHOTO-2022-02-07-14-20-14.jpg)
-且这些推文表明，疫苗可以产生新的癌症：
-![](https://assets.gnews.org/wp-content/uploads/2022/02/PHOTO-2022-02-07-14-20-22.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/02/PHOTO-2022-02-07-14-20-31.jpg)
-
-
-至少，当接种疫苗后，你突然癌症复发或出现新的癌症时，不要感到诧异。
-
-总结
-
-如果您最近接种了疫苗，并且您以前受到控制的癌症病情急转直下，罪魁祸首很可能是您接种的”安全有效”疫苗。
-
-参考链接：[Cancers coming back with a vengeance is very common after the COVID vax](https://stevekirsch.substack.com/p/cancers-coming-back-with-a-vengeance)
-
-审核校对：Barry Jack
-上传排版：F
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
