--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,129 +1,38 @@
 ---
-title: 美国大使馆撤离, 不断不交弄死共产党
+title: 普京获北京五千亿大礼后缺席习近平宴会
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1968797/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1968971/)
 
-[https://gtv.org/video/id=61ff3311d90bdd2085a5a09e](https://gtv.org/video/id=61ff3311d90bdd2085a5a09e)
+**撰稿：日本东京方舟农场 子辰**
 
-接下来就是共产党
-El que sigue es el Partido Comunista
+据大纪元2月6日报道，俄罗斯总统弗拉基米尔·普京在参加北京冬奥会开幕式前夕，与北京当局签署了出口石油等大宗商品协议。而备受瞩目的普京，在参加冬奥会开幕式之后，并未出席习近平举办的宴会，引起外界关注。
 
-美国大使馆撤以后
-Después de que la embajada de los Estados Unidos se retirara
+2月4日，俄罗斯总统普京和中共国领导人习近平在北京冬奥会开幕式前进行了会晤，期间，双方签署了15项合作文件，其中包括俄罗斯向中共国出口石油、天然气、小麦等大宗商品的购销协议。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/照片图库-2-2.png)（图片来自《大纪元》）
+据俄罗斯石油公司官网2月4日消息，普京率团访华期间，俄罗斯石油公司（Rosneft Oil）和中国石油天然气集团（下称中石油）签署过境哈萨克斯坦向中国供应1亿吨石油的协议，协议期为10年。
 
-全世界都可以揍他
-El mundo entero podrá apuñalarlo
+据悉，该协议最终的总额将取决于石油市场的价格，按照石油当前的市场价格的计算，该协议总额为800亿美元（约5000亿人民币）。
 
-什么概念我告诉大家
-En qué consiste esto, déjame decirles
+另据俄罗斯卫星通讯社（Sputnik）报导，除上述石油供应协议外，中石油还与俄罗斯天然气工业股份有限公司（Gazprom）签订了一份天然气长期供应协议。
 
-是美国在联合国, 在全世界面前
-Es EE. UU en las Naciones Unidas y frente a todo el mundo
+根据协议，俄气公司将经由中俄远东线，向中石油供应100亿立方米的管道天然气。中俄远东线达产后，俄罗斯向中国每年供应的管道天然气总量将达480亿立方米，较现有供应量规划提高约26%。
 
-1979年建了大使馆
-En el año 1979 se construyó la embajada
+2月5日，习近平夫妇在人民大会堂举行宴会，欢迎出席北京冬奥会开幕式的国际宾客。不过，根据央视画面显示，出席这次宴会的国际级政要人数约有25人，备受瞩目的普京未列其中，引发外界猜测。
 
-中美恢复建交
-China y EE. UU reanudan relaciones diplomáticas
+2月4日，北京冬奥会开幕式期间，郭先生在大直播中爆料说，来北京参加冬奥会的普京团队中有16人感染了中共病毒，另有三人在普京团队下榻的华尔道夫饭店内死亡（未知是否为普京团队工作人员）。
 
-它才合法的有权把台湾(从联合国)踢出去
-De esta forma, tendrá el derecho legal de expulsar a Taiwán (de las Naciones Unidas)
+此前，由于中共侵犯人权、疫情严峻等原因，包括美国、加拿大、澳大利亚、英国、日本、德国约20个国家和地区宣布不派任何官方代表出席北京冬奥会。
 
-美国这次的撤离
-El retiro de EE. UU de esta vez
+相比2008年北京奥运会，这次前来参加北京冬奥会开幕式的国际政要大幅缩水。而且，新华社没有提及的是，这些出席北京冬奥会开幕式的元首和领导人，或与西方民主国家交恶，或很多国家相对比较贫困，或本国的人权记录同中共治下一样糟糕。
 
-授权撤离绝对不是绝交也不是断交
-El retiro autorizado definitivamente no es una ruptura ni un corte de relaciones diplomáticas
+外界评论指，中共耗费巨资举办冬奥会，但是却挽救不了其下跌的国际形象。
 
-美国人是跟它弄什么?
-¿Qué quiere hacer EE. UU con ellos?
+参考链接：
+[https://www.epochtimes.com/b5/22/2/5/n13557271.htm](https://www.epochtimes.com/b5/22/2/5/n13557271.htm)
 
-不断不交弄死它
-No cortar ni romper para causarle la muerte
-
-记住我今天第一个说
-Recuerda primero que dije hoy
-
-叫不断不交
-No es una ruptura ni un corte
-
-啥叫不断不交?
-¿En qué consiste esto?
-
-成天告诉你, 我要回来啦
-Se la pasa diciendo todo el día: “ya voy a regresar”
-
-甚至真的有人回去表现表现
-Incluso habrá personas que realmente regresará para actuar
-
-给我点这个, 给我点那个
-Dame esto, dame aquello
-
-看看南斯拉夫还有伊拉克当年大使馆发生什么
-Mira lo que pasó con las embajadas de Yugoslavia e Irak
-
-就是直接性的
-Fueron de manera directa
-
-就内部, 这是国家的政策
-Internamente, es política nacional
-
-跟两党都没关系
-No tiene relación con los dos partidos
-
-这是美国人的决定
-Esta fue la decisión de los estadounidenses
-
-千万记住, 这不是美国政治决定
-Deben recordar, esta no fue la decisión política de EE. UU
-
-这是美国国家安全的选择
-Fue una opción para la seguridad nacional estadounidense
-
-我再说一遍, 美国20年了
-Digo de nuevo, EE. UU tiene 20 años
-
-准备好就干掉这几个国家的政权
-Ya está preparado para eliminar los regímenes de estos países
-
-从来没停止过, 跟任何总统, 党派没关系
-Nunca había paralizado, no tiene relación con ningún presidente y partidismo
-
-这个行动就是告诉你
-Este movimiento te está diciendo
-
-我现在就不会断
-Ahora no romperé
-
-也不会交
-Tampoco cortaré
-
-不断不交弄死你
-No cortar ni romper para causarle la muerte
-
-你看共产党会被玩死
-Verás, el Partido Comunista será jugado hasta morir
-
-日期：02/04/2022
-原视频标题：美国大使馆撤离, 不断不交弄死共产党
-El retiro de la embajada de EE. UU; no cortar ni romper le causará la muerte al Partido Comunista
-
-* * *
-
-原视频日期：01/30/2022
-原视频网址：**[https://gettr.com/post/prcgn3e965](https://gettr.com/post/prcgn3e965)**
-任务编号：KC443（3643）
-视频时间段：0:00-01:32
-西听校：洛杉矶盘古农场- 霙霙（文霙）
-翻译：洛杉矶盘古农场- 小文萱
-翻译终校：洛杉矶盘古农场- 霙霙（文霙）
-字幕+视频制作：洛杉矶盘古农场-天涯行
-审片：洛杉矶盘古农场-银龙
-发布：洛杉矶盘古农场-恩典
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+素材采编：子辰
+编辑：青城道姑
+发布：文曦
 
  
 
