--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,26 +1,43 @@
 ---
-title: 2.06 大直播后记：女性是共产党执政的工具
+title: 中国苏联古巴朝鲜共产主义的本质是我没有的你也不能有
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1969028/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1969149/)
 
-整理：Rianna
-编辑：Sadhu
+G-TV视频链接：[https://gtv.org/video/id=620087d1585ecc15d73e5d80](https://gtv.org/video/id=620087d1585ecc15d73e5d80)
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-3.png)图片来源：雅典娜设计组
+**郭文贵先生：**我们爆料革命人永远做到“唯真不破”，你得看你自己。就像昨天有人跟我说：“哎呀，Miles，你就是神哪！天下哪有你这样的人哪？几十亿人类，你轻描淡写，你看着轻轻松松你就把这个事儿搞定了，这个美国大使馆的事情多大多大！” 你知道我要有一点点儿感觉，感觉到说这话我幸福啦、我兴奋啦、我自我感觉好啦，我就该死！我不觉得是因为我，但没有我们它绝对不会有这样儿发生，但我不会觉得是因为我。这就是一个中国人你看到的。欺民贼一有啥事儿“这是我干的，这都是我干的！”
 
+他看不得喜币有战友发财。你知道喜币发财有多少人心疼啊，你们一定记住：他不是说你发财他没发着，他是看不得你发财。他可以“我可以没有，你也不能有！”这就是大陆人看台湾和香港一样的道理，“我可以没有民主法治，你也不能有！” 所有人都是这病态的心态，一看到雅各你长这样儿，“凭什么你长这样脸那么好看啊？我可以没有长那么好看，你不能长那么好看！” 这才是邪恶的。
 
-我们的一个战友，她曾经唱过《塞北的雪》。她说，这个体制太邪恶了，没有一样是真的！ 我想告诉大家，像这样的女孩，如果没逃出去，她会是什么样的结局呢？她绝对会在音乐圈会中惨不忍睹。共产党说所有的女人是半边天，你觉得真的是半边天吗？这位女孩的介绍人是现在国内几个大明星的经纪人，他说，七哥，中国女性的地位和阿富汗比，和中东比，算不错的了。毕竟中国绝大女性在家中说了算。我说，无知就是这么诞生的。让你死，让你被虐待，让你被贩卖，你还感觉得很好。
+这就是没人看得了佳佳、王子在国外就长这样的，现在两个在这儿并肩齐坐，私下里边儿脚踩着还摸着腚是吧？然后就你们过着美好的生活，他亲戚都不接受，同学都不接受，“我可以没有这样儿的生活，你也不能有！” 这才是邪恶的共产主义本质。就这个世界上，老子不过美利坚式生活，是吧？你们也都不能过，这就是古巴呀，这就是北朝鲜啊，是吧？这一样的，这就是共产党、原苏联啊。
 
-下个话题就是中国女性的待遇。所谓中国女性的半边天，我从我娘身上，我从我嫂子身上，我从你七嫂身上从来没有感受到。即使在今天，你七嫂子就像我老板一样，天天像训狗一样训着我，哈，我也不觉得你七嫂是半边天。我觉得中国人在思想里和境界里就没有把女人和男人同等过。只是中国女人自我感觉地认为自己和男人平等。这就是为什么全中国社会女人被贩卖。没有任何人认识到男女不平等这一点。甚至我本人在当年在老家，看到买媳妇的事情，我也没有觉得不正常。这是在89年以前的事儿，我当时十三四岁。在中国这个社会中，由于对女性的定位，人们觉得女人就该买。女性就是工具，就是商品，就是被买卖。 就像在中东和在印度，一旦女人有了什么婚外情，就该拿石头砸死，就活该，而且人们都围着看，这种行为就叫愚昧，就叫无知。将这一点对比西方，大家可以看到西方的伟大。在西方，只要绑架女性，就要使用绞刑惩罚。这就是东西方的差距。共产党的老杂毛们完全不懂得这样的人类文明，还所谓半边天。我曾经问过中国最牛的执政的女性吴仪，最强的，我说你怎么看待半边天这个说法。连吴仪都说，在中国这个国家，女人但凡出人头地，要么有色，要么有一个阴歹的心。有色，就有人睡你，老杂毛们就选长得好看的，生辰八字和的作为生孩子的工具。吴仪说，如果你漂亮，你就有生存的空间。另外，你就是心狠歹毒，啥都能干，变态。女贪官被抓起来以后，发现她们都比男的狠。所以在中国，女性是没有半边天的，女性是共产党执政的工具，是全社会的工具。没有人想过，你妈妈那么辛苦累死，你也不觉得是不公平的。 我觉的，不管你是大师还是天使，你们从来没有体贴过母亲，我不相信你们会公平对待过母亲。中国女性从任何角度都没被公平对待过，特别是在中国这种男性的社会，只是你不知道。在中国法律中，已经认为绑架是习以为常的事情，是合理的。这是一个巨大的人权的讽刺。在西藏和新疆，女孩儿但凡有点姿色都会被选出去。 以音乐团，文工团的形式成为了祭品和贡品。只是是被当地的村长，当地的县长，还是省长、书记，还是中共的老头，反正总有人来享受你的青春和魅力。你就是贡品和性品！
+字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
 
-***发布：**tianzhihuan*
+编辑整理：Jacques；
 
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+字幕文件制作：知津；
+
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
