--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,12 +1,27 @@
 ---
-title: 卢比奥参议员将阻止取消对华贸易关税的动议
+title: 以色列中共病毒感染重症患者1229例 再创新高
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1968898/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1969051/)
 
-02/02/2022 卢比奥参议员表示，中共一向不遵守协议，他会竭力阻止议会取消对华征收贸易关税的动议。
+撰稿：东京樱花团/闻雨
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-635.png)图片源自本文链接
+2月5日（当地时间）以色列卫生部宣布，有1229名患者感染中共病毒（新冠病毒Covid-19），因病情严重而住院治疗。据当地媒体《以色列时报》报道，这一数字超过了去年1月底的最高纪录1193人，再创新高。一天的死亡人数，也急剧上升到每百万人中有五人死亡。
 
-By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
+在过去的三天里，以色列每天的平均感染人数在五万人左右，以色列在打中共病毒疫苗方面，无论是加强针还是第一针和第二针都处于世界领先地位，是去年德尔塔病毒流行时最早引入疫苗的国家之一。
 
+以色列认为中共病毒疫苗有效地减少了感染者的数量。严重病例的激增是由于去年8月注射的加强针疫苗的效果下降所致。
+
+然而，希伯来大学的Barak Raveh教授告诉《每日电讯报》，“在以色列今年新死亡的822例中共病毒感染患者中，只有293例未接种疫苗。也就是说65%以上的死亡病例都是接种过中共病毒疫苗的人。”
+
+尽管如此，以色列仍然迷信这种毫无科学依据的疫苗有效论。还要向医务人员和60岁以上的人提供第四针中共病毒疫苗。
+
+这种失去逻辑思维的盲信，政府错误的决策，不知道会给以色列带来什么样的灾难性后果。
+
+信息来源：[イスラエル、コロナ重症患者１２２９人で過去最多…オミクロン株への油断が災い呼んだ](https://s.japanese.joins.com/Jarticle/287460)
+
+*校对：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
