--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,26 +1,19 @@
 ---
-title: 为什么要追求喜马拉雅（二）
+title: 战友们做了很多准备工作
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968837/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968988/)
 
-整理：雅典娜速记组
-编辑：tianzhihuan
+#### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
+视频定位：BENJ1；WEI
 
-为啥追求喜马拉雅？当时海外的欺民贼攻击我的时候，当他们说郭文贵一手烂牌，不知道怎么打的时候，我真的是在那个18楼哈哈哈哈大笑，我那个笑声我觉得真的震到天了，也真的像拍电影一样，就像那武侠小说，我觉得我真的把纽约曼哈顿那种震垮的感觉，我笑了很久。就是他们，我知道这人是没希望了，就你告诉郭文贵我怎么打牌？我都能印出154张牌，不是54张牌，你告诉我解释解释喜马拉雅的意义，他都不知道，他应该看出郭文贵的神秘和他的深思熟虑，我就想完了，这帮人完了，这不是对牛弹琴了，这是与猪弹琴了。
+*发布：陶子*
 
-你必须问一个问题，为什么他吃猪食，他不吃馒头，吃包子，人为什么不吃猪食啊？现在猪告诉人家说，你郭七，你个傻货竟然吃大包子，你看，我这猪食吃多好啊，那你发现原来这是猪啊，这一群猪啊，原来我的市场这么大，我就继续吃我的，那你吃你的猪食把。我用了几年证明了这个。当我说一切都是刚刚开始的时候，欺民贼就骂我，攻击我，共产党说这个傻子，一切都是刚刚开始你永远都不会结束，他就不知道“一切都是刚刚开始”这句话，是从什么时候开始的？罗马时代，波斯人是人类文明的开始，你看当年波斯打仗的时候在前面的，一切都是刚刚开始。
-
-没人懂他，就没有人真正懂人类的历史文明的历史，耶稣告诉你，现在从十字架下来了，他从十字架下来了，活着回来了，证明给你，我是神，我能活着。第一句话，一切都是他。没人解读过。所以说今天雷蒙问得好，喜马拉雅山就是耶稣复活的故事。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/为什么要追求喜马拉雅（二）-.jpg)
-2022年1月7日文贵大直播
-
-*发布：tianzhihuan*
 更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena](https://twitter.com/HimalayaAthena1)
+[澳大利亚墨尔本农场Gettr：himalayaathena](http://gettr.com/user/himalayaathena)
 [澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+[澳大利亚墨尔本雅典娜农场Discord](http://xn--discord-cu4k86skkas5c126a4lez1be9fmukp34csc6a3e9m/)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](http://gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
