--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,30 +1,11 @@
 ---
-title: 首批美军抵达波兰增援北约应对俄乌危机
+title: 卢比奥参议员将阻止取消对华贸易关税的动议
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1968782/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1968898/)
 
-**撰稿：日本东京方舟农场 子辰**
+02/02/2022 卢比奥参议员表示，中共一向不遵守协议，他会竭力阻止议会取消对华征收贸易关税的动议。
 
-据大纪元2月6日报道，在俄乌关系紧张之际，首批增援北约（NATO）的美军于2月5日抵达波兰东南部的一个军事基地。
-
-据波兰军方发言人利普钦斯基（Przemyslaw Lipczynski）少校告诉波兰新闻社（PAP），一架载有美国指挥人员的小型Beechcraft C-12 Huron飞机于周六上午10点左右降落在热舒夫军事基地。该基地靠近波兰与乌克兰边界。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/7C8BF2BC-5F7B-4E21-98C5-D1E60D71398B_1_201_a.jpeg)（图片来自《大纪元》）
-利普钦斯基证实，约1700名驻扎在北卡罗来纳州的第82空降师士兵将空降波兰。这是一支精英快速反应部队，过去跟波兰军队在伊拉克、阿富汗共同执行任务。
-
-此前，美国总统拜登1月2日下令向波兰和罗马尼亚增派近3000名士兵，以保护东欧免遭乌克兰危机的潜在影响。
-
-与此同时，就在美国部队特遣队抵达之际，俄罗斯国防部宣布，它已派出一对具有远程核能力的轰炸机在莫斯科盟友白俄罗斯上空巡逻，白俄罗斯与波兰接壤。
-
-据悉，俄罗斯一直否认有入侵乌克兰的计划，但在乌克兰边境附近部署了十多万名士兵。在过去的外交谈判中，俄罗斯一直要求北约不许东扩，包括北约承诺永不接纳乌克兰，否则俄罗斯可能会采取军事措施。
-
-美国和北约都拒绝了俄罗斯的要求。俄罗斯总统普京则表态，莫斯科准备与华盛顿及其北约盟国进行更多会谈。
-
-参考链接：
-[https://www.epochtimes.com/b5/22/2/5/n13557381.htm](https://www.epochtimes.com/b5/22/2/5/n13557381.htm)
-
-素材采编：子辰
-编辑：青城道姑
-发布：文曦
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
  
 
