--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,42 +1,39 @@
 ---
-title: 台湾外交部称俄中联合声明是对台湾主权的侮辱
+title: 从公开履历分析中共特务单伟建对美国的威胁
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1968718/)
+`喜马拉雅德国纽伦堡正义农场` [轉載自GNews](https://gnews.org/zh-hans/1968880/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/New_Project-2.jpg)资料图
-台湾英文新闻2022年02月05日台北报道，台湾外交部周六（2月5日）谴责俄罗斯和中共国当天发表的联合声明，称其试图取消台湾主权的合法性。
+作者：德国纽伦堡正义农场 文玖
 
-在一份关于国际关系和全球可持续发展的联合声明中，俄罗斯重申其对“一个中国”原则的支持，并表示反对台湾独立。
+单伟建是公认的投资界的大佬，曾入选《财富》2020 年中国最具影响力的 30 位投资人，是国内资本界口中的“野蛮人”。这个公开场合爱说英语，接受采访必高呼自己是“自由市场的捍卫者”，看起来完全西化的一个人，真如他表现的那样吗？我们仅从公开资料来分析，看看单伟建的真正底色。
+1954 年，单伟建出生，父母均为中共国原对外经贸部干部，中共向来讲究“根正苗红”，单伟建无疑是其中的佼佼者。
+1966 年，单伟建小学毕业，时值“文革”开始，12 岁的单伟建跟比他大很多的高中生一起，参加了“全国大串连”，穿梭于全国各大城市之间。一个 12 岁的孩子，能如此早熟，主动参与政治，可见其家庭和学校教育对他的影响之深。
+1969 年，单伟建响应毛泽东“上山下乡”号召，投身内蒙古的大漠戈壁，成了一名插队知青。这也是后来他的自传《走出戈壁》名字的由来，可见单伟建对知青岁月的感受，更多的是自豪。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screenshot-2022-02-07-at-07.39.57.png)
+1975 年，单伟建提前结束插队生涯，顺利进入对外经贸大学学习，并于 1979 年留校短暂任教，先后教授英美文学、经济学和其他学科。了解知青返城那段历史的人都知道，如果没有相当的关系，连返城都很难，更别说能获得进入大学深造的机会，毕业还能留校任教，不得不说单家的党内关系很硬。
 
-此外，俄罗斯和中共国表示，“倡导民主和人权不能被用来对其他国家施加压力”，并表示反对在保护民主和人权的幌子下干涉主权国家的内政。两国还敦促国际社会“尊重文化和文明的多样性，以及不同国家人民的自决权”。
+1979 年，随着中美建交，单伟建成为第一批公派出国的留学生，顺利前往旧金山大学攻读 MBA，虽然 MBA 学费很贵，但单伟建得到了神秘人资助学费。在美国旧金山大学期间，他还曾在Graham&James 律师事务所(旧金山一家主要的律师事务所)任职法律职员。从那时起，单伟建就接触上了美国司法界人士，从后来 PAG 对郭文贵先生的缠诉案来看，单伟建对美国司法的渗透已经达到极其恐怖的程度。
+1982 年，单伟建进入伯克利大学攻读硕士和博士学位，他的导师之一就是后来成为美联储主席的珍妮特•耶伦。并且耶伦亲自为单伟建2019 年的自传《走出戈壁》作序，可见师徒一直保持良好关系。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screenshot-2022-02-07-at-07.40.28.png)
+有一个细节值得注意，在1982年至1986年的大部分时间里，单伟建都在伯克利攻读博士学业期间，常常去的一家书店里面挂着两张巨幅画像：一张是阿尔伯特·爱因斯坦，另一张是卡尔·马克思。
+从单伟建的求学经历不难看出，他是中共重点培养的“根正苗红”的人才，否则不可能得到如此好的机会。同时也应该看到，他在文革时期错过了完整的中学教育，进入大学后还能顺利完成学业，并且留校任教，出国后又拿到各种学位，不得不说他非常聪明，异常勤奋，这样的人必定是中共重点培养的人才。
+1987年，单伟建作为精英“青年专业人才计划”的一员，担任位于华盛顿特区的世界银行投资官员。不得不说单伟建的眼光很独到，1987年就能进入世界银行建立关系。
+1988年，在美国宾夕法尼亚大学沃顿商学院任教授，期间创办在美国发行的学术期刊《中国经济评论》，并担任该期刊的创始主编。在中国的改革开放之初，单伟建就在美国成立学术期刊，专门介绍中国经济，这为他后来成为中国和美国之间的“经济桥梁”打下基础。
 
-根据台湾外交部的一份新闻稿，外交部回应说，中共国从未统治过台湾，并强调只有由台湾人自由选举产生的政府才能在国际上代表这个国家。外交部说，无论中共政府如何试图歪曲其对台湾的看法，它都无法改变这一事实。
+1993 年，单伟建加入 JP Morgan 香港，并创造了年增长 30～40%的明星业绩。后升任摩根大通(JP Morgan)董事总经理，并兼任中国区首席代表。经过长期的积累，单伟建终于迎来了飞跃，成为中美投资界无法绕过的人物。
+1998 年，转投新桥投资(Newbridge Captial)，新桥资本是私募股权巨头德太投资集团(TPG)的亚洲分支，成为 TPG 的资深合伙人。
+在新桥投资期间，单伟建完成多项重大交易，其中包括，2000 年对韩国最大的银行“韩国第一银行”的收购和出售。
+2002 年，单伟建入主深发展，成为首例外资收购中国上市商业银行，用《华尔街日报》的话说，“创造了历史”。同时也得到国内资本圈“野蛮人”的称号。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screenshot-2022-02-07-at-07.42.23.png)
+期间单伟建还担任中银香港独立董事，参与该行重组上市，并一直担审计委员会主席。还担任宝钢股份董事兼审计委员会主席，中国联通董事兼审计委员会主席，以及台泥国际董事。从这些身份不难看出，中共对这位“野蛮人”相当照顾。
+2005 年，单伟建出任 TPG 集团董事总经理。
+2010 年，开始担任太盟投资集团(Pacific Alliance Group) 董事长兼 CEO。
+根据太盟投资(PAG)官网介绍，目前太盟投资管理的资产达 450 亿美元，在亚洲各地投资超过 750 亿美元，其中很大一部分投向中国。
+不得不说的是，PAG 的客户包括大型养老基金、保险公司和捐赠基金。私募股权投资者包括加州公务员退休基金、旧金山公共雇员退休体系，以及新加坡和科威特的主权财富基金等。PAG 的投资回报根植于中国国内经济的高歌猛进，而现在中国经济崩溃在即，PAG 暴雷也指日可待，届时这些美国的大型退休基金必将血本无归，这会对美国人造成多大的灾难？当灾难发生的时候，美国人必然会迁怒于中国。后果不可想象！
+综上所述，单伟建的真正的底色是中共的最高等级间谍，全方位渗透美国经济、政治、司法等方方面面，单伟建是中共深埋在美国地底下的一枚巨型核弹，他的引爆不仅会毁掉无数美国人，更会引发美国人对中国和中国人的仇恨，给两国人民乃至世界带来无穷的祸害。
 
-外交部说，中共国无权在世界上代表台湾，它不应该强迫其他国家、国际组织和国际公司违背其意愿支持“编造的”“一个中国”原则。它将中共继续谎称“台湾属于中华人民共和国”的说法称为中共国的虚假信息运动的一部分。
-
-台湾外交部指责中共国利用与俄罗斯的双边会谈来推动专制主义的扩张，是对“奥林匹克五环的侮辱”。它补充说，“世界认识到中共政权的侵略、扩张和破坏和平的狰狞面目”。
-
-简评：
-
-中共在中俄发表这个联合声明上面花了天价的钱，为俄罗斯能与中共共同署名站队，据说中共支付了俄罗斯1000亿美金，这些钱都来自与中共国的老百姓。在这样的政府统治下，中共国还有无数个杨改兰在为每天的生存挣扎中。中共提出的所谓‘一个中国’原则本身就是十分可笑的，历史告诉我们真正将中国一分为二的就是中共。是中共在二战唆使日本入侵中国，挑起日本与国民党军队的大战，而自己躲在山沟里面通过女色，谎言，画大饼欺骗无数的穷苦农民加入共产党为自己当炮灰。等到二战结束，日本战败退出中国，国民党元气大伤，而中共坐收渔翁之利乘势反击国民党，最终夺取了中共大陆的控制权。而历史又再一次告诉了我们，在中共掌权后，中国老百姓的苦难才真正的开始了，参与朝鲜战争，100万投降共产党的国民党军队被当炮灰，共产党又枪杀地主，没收土地分给自己，在大丰收的情况下又引发大饥荒，中国人民死了千千万，党内斗争造成文化大革命，各种批斗武斗，中国人民又死了千千万。为了毛泽东的一句话‘人多力量大’疯狂鼓励生育，又为中共在国际上的脸面施行‘一胎政策’，亿万的胎儿被强制扼杀在胎腹中，现在又担心以后奴隶不够用开放‘二胎’‘三胎’政策，中共像对待畜生一样将中国人玩弄于鼓掌之中。现在又想去玩弄台湾人，中共的所作所为真是人神共愤，中共就是比恐怖份子还要邪恶的恐怖份子，中共政权不除，全世界将永远没有安宁。
-
-新闻链接:[https://www.taiwannews.com.tw/en/news/4432321](https://www.taiwannews.com.tw/en/news/4432321)
-
-翻译/简评: kkoto(芬兰大灰狼)
-
-PR:Harvey（叶知秋）
-
-* * *
-
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
-
-
-编辑：【英国伦敦喜庄园编辑部】
-
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
-
+发稿：德国纽伦堡正义农场 am夏天
+![](https://assets.gnews.org/wp-content/uploads/2022/02/德农二维码-15.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
