--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,40 +1,23 @@
 ---
-title: 殡葬产业人揭示中共病毒疫苗造成的大量死亡
+title: 岸田首相为保支持率把东京和大阪推向疫苗接种最前沿
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1968717/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968839/)
 
-撰稿：妇女之友-电流声
+撰稿：东京樱花团/待命（文晓）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-629.png)（图片源自本文链接）
+2月7日共同通信社消息：由自卫队运营的中共病毒(新冠病毒Covid-19)疫苗大规模接种活动于7日正式开始。东京会场每天的接种人数比前一周增加了三倍，达到2160人。大阪会场也在一栋民间建筑中开始了疫苗接种。
 
-澳大利亚悉尼不愿意透露姓名的这位从事殡葬产业的女士，不无痛心地告诫人们，尤其是父母亲们，千万不要给孩子打中共病毒疫苗了！
+东京10日开始，配额逐渐增加到每天5,040人。大阪也为扩大接种规模而开始选择场地。首相岸田文雄在下议院预算委员会会议上说：将在14日之前把接种者人数扩大到每天约2500人。
 
-中共病毒疫苗造成的大量死亡：婴儿死亡，年轻人，心脏病，中风，血栓……
+政府希望吸引大量申请者到自卫队会场接种，呼吁加快第三轮疫苗接种，因为第三轮疫苗接种被批评拖延了。
 
-殡仪馆已经处理不过来。有些地方买新的冰柜（装尸体），一个冰柜可以装20具尸体，八个冰柜装了160具尸体。
+现在，与2020年初病毒刚刚开始流行时不同，已经有那么多病毒专家和医生们开始为正义发声，揭露疫苗真相了。作为一个科技先进国家的政府，难道会一点信息都没有吗？可为什么还会有人批评政府推进疫苗接种工作不够及时呢？这些人居心何在呢？作为首相的岸田，难道就那么在意来自这些人的支持率吗？
 
-大量孩子死亡，千万不要给孩子扎针了。她100%肯定一大波儿死亡正在靠近，但大多数人还没有意识到这个问题。
+信息来源：[自衛隊接種が本格稼働 東京3倍、大阪来週拡大へ (msn.com)](https://www.msn.com/ja-jp/news/national/%E8%87%AA%E8%A1%9B%E9%9A%8A%E6%8E%A5%E7%A8%AE%E3%81%8C%E6%9C%AC%E6%A0%BC%E7%A8%BC%E5%83%8D-%E6%9D%B1%E4%BA%AC3%E5%80%8D-%E5%A4%A7%E9%98%AA%E6%9D%A5%E9%80%B1%E6%8B%A1%E5%A4%A7%E3%81%B8/ar-AATxA7r?ocid=msedgntp)
 
-1月27日，在昆州的黄金海岸一家接种中共病毒疫苗的诊所里，惨剧再度发生！据凯恩斯新闻报道，上午9：30分一位母亲领着3个6-10岁的女儿来接种了中共病毒疫苗。约接种后30分钟左右，其中一个女孩突然手和面部开始抽搐，脖子僵直。紧接着不到30秒，另一个约9岁的女孩又发生了同样的症状，第三个女孩还不清楚会发生什么。当天下午约5：30-6：00左右闻得噩耗，这两个约6-10岁的小女孩已经死去。
-
-还有，在新南威尔士州被诊断出患有中共病毒并去世的18人中：
-
-1位40多岁
-
-3位60多岁
-
-4位70多岁
-
-6位80多岁
-
-4位90多岁
-
-2人打了三针；14人打过两次中共病毒疫苗；1人打了一针；一人没有打。
-
-18人死者中，17人打了中共病毒疫苗！
-
-参考来源：[https://discord.com/channels/@me/874996068595667016/940074298037661726](https://discord.com/channels/@me/874996068595667016/940074298037661726)
-
-*编辑&发稿：mgjxs*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/TUBIAO-X.jpg)
+*校对：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
