--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,19 +1,27 @@
 ---
-title: 秘翻在线：美武器供应商研发空投物资的无人滑翔机
+title: 福特因“持续的供应链中断 ”而关闭8家工厂
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968644/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968735/)
 
-**撰稿：billwilliam**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screenshot-2022-02-07-134431.jpg)图源：flightglobal.com
-据《国家利益》报道，一家名为“沉默之箭”（Silent Arrow）的武器供应商研发一款具有滑翔能力的GD-2000空投箱，用来在战场上向士兵空投物资。
+编译：花岗岩
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-96.jpg)
+图片来源：网络截图
 
-这款GD-2000一次性空投箱其实就是带有折叠翅膀的箱子，尺寸为2x2x8英尺，可携带16000磅重的负荷。从运输机空中投放后，折叠翅膀打开进行滑翔，利用GPS制导和LiDAR测距仪抵达目标投放点。从25000英尺的空中投放后，空投箱可滑翔飞行40英里。直升机投放也可滑翔15英里（未公布投放高度）。GD-2000空投箱可携带食品、燃料、武器等物资。“沉默之箭”公司希望未来能扩大空投箱，达到可以向一支步兵队伍提供一天正面激烈战斗所需的物资。除了无动力滑翔箱以外，该公司还生产一种有动力的版本，配有180马力电动机，可以从临时跑道起飞。
+据零对冲12月6日报道，福特汽车公司在第四季度利润和销售未达到华尔街预期后跌入熊市。首席执行官吉姆·法利（Jim Farley）警告说，“持续的供应链中断”限制了其满足强劲需求的能力。
 
-GD-2000的优点在于其紧凑的外形和无声的隐蔽滑翔能力，不易被敌方探测。同时，其较远的滑翔距离允许运输机在远距离外投放，保证对峙中的安全。据称美国在中东的一个盟国政府近日首次在海外执行任务中使用GD-2000空投箱。该公司公告称他们在37个国家有分销协议，并致力于成为全球空投物资的标准。
+路透社报道，因为芯片短缺问题，这家底特律汽车制造商将从周一开始关闭在美国、墨西哥和加拿大的八家工厂。
 
-这款空投箱可能在未来台海局势中发挥作用，如果战争爆发，美军运输机可以在较远的距离空中投放武器和物资给台湾。
+位于密歇根州、芝加哥和墨西哥库奥蒂特兰（ Cuautitlan）的工厂将暂停生产。在堪萨斯城，其F-150皮卡的生产将暂停，而Transit货车的生产将有一个班次运行。底特律汽车制造商还将在其位于肯塔基州迪尔伯恩和路易斯维尔的工厂实行单班制或减少时间表，同时取消加拿大奥克维尔工厂的加班。所有变化都将在2月7日开始的一周内实施。
 
-**[信息来源](https://nationalinterest.org/blog/buzz/resupply-gliders-could-be-future-military-logistics-200349)**
+周五，福特股价暴跌10%，此前该汽车制造商报告的第四季度利润和销售情况均未达到预期。该公司的股价已经暴跌到熊市。
+
+美国银行证券部的约翰·墨菲（John Murphy）在周五的一份说明中告诉客户，福特的盈利不达标“是销量下降（芯片短缺/供应链中断）、原材料成本上升和移动支出增加的综合结果”。
+
+路透社的报告描绘了该公司2022年具有挑战性的背景，因为它在采购芯片方面继续遇到麻烦，这个问题已经持续了一年多，至今仍未解决。
+
+好消息是，随着电动汽车的推出，福特的转机正在进行中。然而，它必须降低其供应链的复杂性，这一过渡并不容易。
+
+新闻来源：[Ford Shutters 8 Factories Due To “Persistent Supply Chain Disruptions”](https://www.zerohedge.com/markets/ford-shutters-8-factories-due-persistent-supply-chain-disruptions)
 
  
 
