--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,47 +1,43 @@
 ---
-title: 澳洲一国党参议员说，疫苗真实成份没有公布
+title: 赵立坚、秦刚等中共外交人员对自己的狂妄言论深信不疑
 ---
-`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/1968991/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1969110/)
 
-#### **雅典娜【聚焦澳洲】，汇聚澳洲時事分析报道**
+G-TV视频链接：[https://gtv.org/video/id=6200872d585ecc15d73e5d52](https://gtv.org/video/id=6200872d585ecc15d73e5d52)
 
-整理/编辑：文泓
+**郭文贵先生：**你看那个外交部赵立坚那是什么，还有那“战狼”过去这些人，什么秦刚，还有什么一切的外交部人员，你一定要记住：他站那儿讲话，你别以为他以为说的是假话，他深信不疑。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/32.png)图片来源：8satire.com
+就像当时伊拉克那个乌达那个发言人一样，说：“记住美帝国主义，明天你们家的卧室就会看到伊拉克的军队的存在！”他深信不疑的。南斯拉夫当时发言人告诉美军：“这里是你的地狱，会让你美军葬身于南斯拉夫。”  利比亚卡扎菲把那个地壳给挖了30年弄一大水引过来了，说：“这个水会淹死所有的美国人。” 他拿钱去资助那些所谓的恐怖组织去，炸掉飞机。你以为卡扎菲是疯了吗？卡扎菲深信不疑，末路是什么？最后他被干掉，解放了。
 
+“丧心病狂”这四个字儿对待所有走极端的人都是适合的，包括路大脑袋、蛇妖闫，还有什么黄河边，还有什么九指妖、欺民贼，就“丧心病狂”，就不接受任何真实的，不能客观地看待自己，也不能看待事物的真实存在。
 
-据《澳大利亚人报》报道，近日，一国党参议员马尔科姆·罗伯茨说，连薯片都提供成分清单，而新冠疫苗的成分却没有公开。
+字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
 
-1月13日，[罗伯茨参议员](https://www.aph.gov.au/Senators_and_Members/Parliamentarian?MPID=266524)曾发推文，“按照法律，超市里连一包薯片的成分却必须公布，为什么疫苗的成分没有公布？”
+编辑整理：Jacques；
 
-回复媒体询问时，罗伯茨参议员的办公室表示，他推文所说的是新冠疫苗。
+字幕文件制作：知津；
 
-在澳大利亚药品和医疗用品的管理机构TGA在[澳大利亚治疗用品登记名录](https://www.tga.gov.au/australian-register-therapeutic-goods)上公布了所有[获批新冠疫苗](https://www.tga.gov.au/covid-19-vaccines)的信息。
+视频制作及上传：Cindy；
 
-由澳大利亚[联邦、各州和领地政府资助](https://about.healthdirect.gov.au/who-we-are)的网站Healthdirect称，[新冠疫苗的成分](https://www.healthdirect.gov.au/covid-19-vaccination/about-the-covid-19-vaccines#ingredients)根据产品不同有所差异，但可能包含以下成分：
+G-News发布：小满；
 
-- 病毒的蛋白质片段；
-- 遗传密码（DNA或mRNA）片段；
-- 很少量毒性减弱的病毒；
-- 增强免疫反应的一种物质（称为佐剂）；
-- 注射用灭菌盐水（生理盐水）；
-- 少量防腐剂或稳定剂以确保疫苗经过储存与运输依然有效。
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
 
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
 
-在**与媒体**联络时，罗伯茨参议员的发言人承认TGA网站上公布所谓新冠疫苗的成分，但她在电子邮件中表示“关于这些成分和相关成分对病人的影响按照人们对知情同意的预期只有有限的披露或没有披露”。
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
 
-众所周知，处于实验阶段的新冠疫苗，目前是在紧急授权下使用。可以确定疫苗里含有信使RNA用来制造刺突蛋白，还能阻止身体清除信使RNA；还有脂质纳米颗粒、有聚乙二醇。有一位德国医生生前发现里面有氢氧化石墨烯，在血液流动中有可能破裂，引发血栓、心脏病和中风。这些深层的揭露，普通人在政府网站上是看不到的。
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
 
-新闻链接：[一国党参议员说疫苗“没有公布”成分信息](https://cn.theaustralian.com.au/2022/01/31/63050/)
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
 
-发布：tianzhihuan
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
 
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本银河系农场\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
