--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,34 +1,19 @@
 ---
-title: 美国众议院通过《美国竞争法》法案
+title: 秘翻在线：美武器供应商研发空投物资的无人滑翔机
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1968597/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968644/)
 
-**【雅典娜快讯】，紧贴时代脉搏**
+**撰稿：billwilliam**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screenshot-2022-02-07-134431.jpg)图源：flightglobal.com
+据《国家利益》报道，一家名为“沉默之箭”（Silent Arrow）的武器供应商研发一款具有滑翔能力的GD-2000空投箱，用来在战场上向士兵空投物资。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/pelosi-COMPETES-Act.png)Courthouse News Service
+这款GD-2000一次性空投箱其实就是带有折叠翅膀的箱子，尺寸为2x2x8英尺，可携带16000磅重的负荷。从运输机空中投放后，折叠翅膀打开进行滑翔，利用GPS制导和LiDAR测距仪抵达目标投放点。从25000英尺的空中投放后，空投箱可滑翔飞行40英里。直升机投放也可滑翔15英里（未公布投放高度）。GD-2000空投箱可携带食品、燃料、武器等物资。“沉默之箭”公司希望未来能扩大空投箱，达到可以向一支步兵队伍提供一天正面激烈战斗所需的物资。除了无动力滑翔箱以外，该公司还生产一种有动力的版本，配有180马力电动机，可以从临时跑道起飞。
 
+GD-2000的优点在于其紧凑的外形和无声的隐蔽滑翔能力，不易被敌方探测。同时，其较远的滑翔距离允许运输机在远距离外投放，保证对峙中的安全。据称美国在中东的一个盟国政府近日首次在海外执行任务中使用GD-2000空投箱。该公司公告称他们在37个国家有分销协议，并致力于成为全球空投物资的标准。
 
-**整理：**Eileen（围剿维尼熊）
-**编辑：**翼族
+这款空投箱可能在未来台海局势中发挥作用，如果战争爆发，美军运输机可以在较远的距离空中投放武器和物资给台湾。
 
-根据《联合报》报道：美国联邦众议院2月4日表决通过《美国竞争法》（America COMPETES Act），斥资三千五百亿美元推动美国半导体产业，强化美国对中国大陆的竞争力。法案同时呼吁行政部门将“驻美国台北经济文化代表处”（TECRO）更名为“台湾代表处”（Taiwan Representative Office）。
-
-商务部长雷蒙多称，这是五十年来促进美国竞争力、制造和研发能力的最大投资案。众院科学委员会主席强森表示，这将可帮助美国与中共国“大干一场”。
-
-众议院通过法案后，下一步就是参众两院整合版本，分别取得多数议员支持后，才能送交白宫由拜登签署实施。
-
-法案涵盖多项与台湾相关的条款，包括强化美台伙伴关系、协助台湾发展不对称防卫能力、协助台湾有意义参与包括世界卫生大会（WHA）等国际组织、强化美台双边经贸与科技合作。
-
-**参考链接**：[美眾院通過抗中挺台法案](https://udn.com/news/story/6813/6078352?from=udn-catebreaknews_ch2)
-
-*发布：*翼族
-
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+**[信息来源](https://nationalinterest.org/blog/buzz/resupply-gliders-could-be-future-military-logistics-200349)**
 
  
 
