--- a/gnews/38.md
+++ b/gnews/38.md
@@ -1,27 +1,23 @@
 ---
-title: 01/30⽂贵直播：疫苗是⼈类⼤屠杀、社交媒体⼤封杀（粤语配音）
+title: 立陶宛外长今访澳 坚称不会更名台湾代表处
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1967991/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968214/)
 
-2022年1⽉30⽇⽂贵⼤直播：
+撰稿：东京樱花团/asket
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-617.png)[图片来源](https://newsline.news/gabrielius-landsbergis-minister-towards-authoritarian-regimes/)
+立陶宛外长蓝斯柏吉斯（Gabrielus Landsbergis）于2月6日至10日，将先后访问新加坡、澳大利亚，开拓亚洲及大洋洲市场。据自由时报2月6日引述消息报道说，立陶宛外长蓝斯柏吉斯（Gabrielus Landsbergis）重申不会屈服中共经济胁迫。
 
-1. 疫苗是⼈类⼤屠杀、社交媒体⼤封杀
-2. 如果欧洲最后承认疫苗是灾难，世界的疫苗政治和疫苗经济⾺上就会来
-3. 普京和习太阳以为美国和欧洲无可能同时打赢两场战争，恰恰相反，政治家为了活
-下去他们⾃⼰都要搞战争
-4. 欧洲⼈意识到习近平给普京的两份 4600 亿和 4800 亿的合同扩张了俄罗斯的军事，
-助长了俄罗斯敢于出兵乌克兰，要阻⽌俄罗斯⻄扩，只有先打倒中共
-5. 如果中共⽤核武器，美国和欧洲 100%赢
-6. 华盛顿 17000 个医⽣联合签署拒绝强制疫苗，同时加拿⼤的⼤货⾞全部去了渥太华
-7. 只有爆料⾰命在全世界⼈⾯前说共产党释放的武汉病毒会失控、他们会搞香港遣返
-法、要在香港使⽤化学和⽣物武器
-8. 冠状病毒是⽬标对着⻄⽅的⽣化武器，美国总统听了七哥和班农的话，停⽌了中国
-的旅游令，进入紧急状态，让美国少死了很多人。生化病毒并不是真正的目的，疫苗
-才是真正的⽬的，美国的经济⼀定会有⼀个历史上前所未有的⼤爆破
+立陶宛外长蓝斯柏吉斯访澳前夕，接受《澳洲金融评论报》独家专访指出，立陶宛与澳大利亚此次交流议题将聚焦中共的胁迫和贸易制裁，立澳2国将就如何处理这种情况（被中国经济霸凌）以及学到了什么，又是如何从中变得更强大等议题交换意见，并互相帮助。
 
+据该报称，蓝斯柏吉斯强调，某些国家不应使用经济等胁迫方式，迫使另一个国家改变外交政策。但当前国际商定的规则和法规，正受到“强权国家”挑战，我们正在捍卫国家主权。
 
-By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
+对于外界盛传台湾驻立代表处可能因中共施压而更名一事，蓝斯柏吉斯再度驳斥，他重申，“无论如何，立陶宛都不打算更名。”“他们（指台湾）的正式名称不会改变。
 
+信息源：[立陶宛外長今訪澳-堅稱台灣代表處不更名](https://www.rfi.fr/tw/%E6%AD%90%E6%B4%B2/20220206-%E7%AB%8B%E9%99%B6%E5%AE%9B%E5%A4%96%E9%95%B7%E4%BB%8A%E8%A8%AA%E6%BE%B3-%E5%A0%85%E7%A8%B1%E5%8F%B0%E7%81%A3%E4%BB%A3%E8%A1%A8%E8%99%95%E4%B8%8D%E6%9B%B4%E5%90%8D)
+
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
