--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,39 +1,11 @@
 ---
-title: 相信身在美国的郭文贵先生有中国情报身份是在侮辱美国
+title: 北京冬奥会针对外国运动员毫无根据的中共肺炎隔离政策
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1968989/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1969085/)
 
-G-TV视频链接：[https://gtv.org/video/id=620085a1585ecc15d73e5ca5](https://gtv.org/video/id=620085a1585ecc15d73e5ca5)
+2月3日比利时女子俯式冰橇选手梅尔曼斯，在中共国北京准备参加冬奥时验出中共病毒阳性，没想到在隔离期满并且连续3次筛检阴性后，梅尔曼斯又被要求隔离7天，全程都不能和其他人接触。目前她已被送回奥运村隔离。
 
-**郭文贵先生：**我告诉你，美国政府要但凡有一件信息我是中国情报任何官方的，那几乎是全美国全世界最大的事。就美国政府让容忍一个间谍编制内的在这，那就简直是美国，那就侮辱美国呢，是吧？你在开什么玩笑？佳佳和王子睡了好几年，发现佳佳是个男的，就这么简单的事，真的是王子疯了，是吧？发现是个男的，阴阳人，是吧？怎么可能啊？这种无知、这种撒谎不是他（路大脑袋）多丑陋，可悲的是有人听。
-
-字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
-
-编辑整理：Jacques；
-
-字幕文件制作：知津；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
  
 
