--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,38 +1,28 @@
 ---
-title: 普京获北京五千亿大礼后缺席习近平宴会
+title: 为什么要追求喜马拉雅（三）
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1968971/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1969065/)
 
-**撰稿：日本东京方舟农场 子辰**
+整理：雅典娜速记组
+编辑：tianzhihuan
 
-据大纪元2月6日报道，俄罗斯总统弗拉基米尔·普京在参加北京冬奥会开幕式前夕，与北京当局签署了出口石油等大宗商品协议。而备受瞩目的普京，在参加冬奥会开幕式之后，并未出席习近平举办的宴会，引起外界关注。
+达赖喇嘛离开了西藏，它就没有了任何法力。他亲自告诉我，他没有任何超自然能力。我很尊重他，但是我就没有说话，因为你离开了喜马拉雅山，你不可能有法力。而且我不是因为他说了没有超自法力，我就相信人类不存在超自然法力，我就是超自然法力。
 
-2月4日，俄罗斯总统普京和中共国领导人习近平在北京冬奥会开幕式前进行了会晤，期间，双方签署了15项合作文件，其中包括俄罗斯向中共国出口石油、天然气、小麦等大宗商品的购销协议。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/照片图库-2-2.png)（图片来自《大纪元》）
-据俄罗斯石油公司官网2月4日消息，普京率团访华期间，俄罗斯石油公司（Rosneft Oil）和中国石油天然气集团（下称中石油）签署过境哈萨克斯坦向中国供应1亿吨石油的协议，协议期为10年。
+我能在清风看守所活着回来，你不觉得我是超自然法力吗？
 
-据悉，该协议最终的总额将取决于石油市场的价格，按照石油当前的市场价格的计算，该协议总额为800亿美元（约5000亿人民币）。
+你觉得我在这个四五年里边能这样的一个带着这么多战友，撼动了整个人类上的文明，你不觉得我们有超自然法力吗？你要不觉得，那你就去浪费你自己的生命。
 
-另据俄罗斯卫星通讯社（Sputnik）报导，除上述石油供应协议外，中石油还与俄罗斯天然气工业股份有限公司（Gazprom）签订了一份天然气长期供应协议。
+那就像那欺民贼一样，你以为这你就像猪一样，是笑话。郭七你吃肉，吃大包子，你看你个傻球货，俺吃猪食是吧？去吃吧，去吃你的。还有那个乱伦彪打三针还要表演表演，还要郭宝胜打了3针，你最好打20针。但是我们实在没办法，不能把猪变成郭七，而郭七也不能变成猪啊。郭七就是郭七，而不是郭猪。所以说这句话问的太好了，人类就是这样迎来真正的喜马拉雅山，我们要找这个神女，1万个神女，一万个神男去喜马拉雅山下进行一个仪式化，结果你们看到喜马拉雅山，开出了巨大的什么花？大家知道喜马拉雅是什么花？蓝莲花啊，我的姐妹呀，蓝莲花你们看，满山的蓝莲花，漫山的灵芝草啊。那个时候，你知道大地万物复苏，共产党你就觉得这是狗屎，你就会忘掉了，它没了。就像你做了一场梦一样，黄粱一梦，梦中的妖魔鬼怪完全没了啊。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/为什么要追求喜马拉雅（三）-.jpg)
+2022年1月7日文贵大直播
 
-根据协议，俄气公司将经由中俄远东线，向中石油供应100亿立方米的管道天然气。中俄远东线达产后，俄罗斯向中国每年供应的管道天然气总量将达480亿立方米，较现有供应量规划提高约26%。
-
-2月5日，习近平夫妇在人民大会堂举行宴会，欢迎出席北京冬奥会开幕式的国际宾客。不过，根据央视画面显示，出席这次宴会的国际级政要人数约有25人，备受瞩目的普京未列其中，引发外界猜测。
-
-2月4日，北京冬奥会开幕式期间，郭先生在大直播中爆料说，来北京参加冬奥会的普京团队中有16人感染了中共病毒，另有三人在普京团队下榻的华尔道夫饭店内死亡（未知是否为普京团队工作人员）。
-
-此前，由于中共侵犯人权、疫情严峻等原因，包括美国、加拿大、澳大利亚、英国、日本、德国约20个国家和地区宣布不派任何官方代表出席北京冬奥会。
-
-相比2008年北京奥运会，这次前来参加北京冬奥会开幕式的国际政要大幅缩水。而且，新华社没有提及的是，这些出席北京冬奥会开幕式的元首和领导人，或与西方民主国家交恶，或很多国家相对比较贫困，或本国的人权记录同中共治下一样糟糕。
-
-外界评论指，中共耗费巨资举办冬奥会，但是却挽救不了其下跌的国际形象。
-
-参考链接：
-[https://www.epochtimes.com/b5/22/2/5/n13557271.htm](https://www.epochtimes.com/b5/22/2/5/n13557271.htm)
-
-素材采编：子辰
-编辑：青城道姑
-发布：文曦
+*发布：tianzhihuan*
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
