--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥山东的女老师
+title: 罗斯福对中国的描述
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1973854/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1973892/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
