--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 参加冬奥会外宾惨状
+title: 中俄勾兑关系
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1973909/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1973931/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
