--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: 冬奥将如何落幕
+title: 未接种疫苗是正确的决定
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980546/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980585/)
 
 台灣寶島農場
 
