--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,7 +1,7 @@
 ---
-title: 中共企图利用冬奥让中美关系回暖
+title: 冬奥将如何落幕
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980478/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980546/)
 
 台灣寶島農場
 
