--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 冬奥现上演的剧目，可说了无新意
+title: 加拿大卡车司机反疫苗运动背后的中共渗透警讯
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980628/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980690/)
 
 台灣寶島農場
 
