--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,9 +1,11 @@
 ---
-title: 未接种疫苗是正确的决定
+title: 新中国联邦的三件大事
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980585/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980646/)
 
 台灣寶島農場
+
+
 
  
 
