--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,9 +1,11 @@
 ---
-title: 冬奥现上演的剧目，可说了无新意
+title: 新中国联邦的三件大事
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980628/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980646/)
 
 台灣寶島農場
+
+
 
  
 
